Updated translations for Serbian (intentionally not applying to trunk too).
git-svn-id: http://svn.gna.org/svn/wesnoth/branches/1.8@42294 75b3775d-3801-0410-9e12-e2e43121521d

--- a/po/wesnoth-ei/sr@ijekavianlatin.po
+++ b/po/wesnoth-ei/sr@ijekavianlatin.po
@@ -9,16 +9,16 @@ msgstr ""
 "Project-Id-Version: wesnoth-ei\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-24 10:36+0200\n"
-"PO-Revision-Date: 2010-04-05 17:36+0200\n"
-"Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
+"PO-Revision-Date: 2010-04-28 14:01+0200\n"
+"Last-Translator: Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -112,7 +112,7 @@ msgid ""
 "It was the thirteenth year of Konrad II's reign, and there were strange "
 "occurrences in the Estmark Hills on the eastern border of Wesnoth."
 msgstr ""
-"Biješe trinaesta godina u vladavinu Konrada Drugog, kad počeše da se zbivaju "
+"Bješe trinaesta godina u vladavinu Konrada Drugog, kad počeše da se zbivaju "
 "čudni događaji u Estmarškim brdima, na istočnoj granici Vesnota."
 
 #. [part]
@@ -151,7 +151,7 @@ msgid ""
 "to combat these intrusions."
 msgstr ""
 "Pošto je kralj primio vest o problemu, njegov savjetnik Desin imaše puno "
-"toga da kaže. Očito, ovi napadi bijehu u vezi sa sličnima koji se ranije "
+"toga da kaže. Očito, ovi napadi bjehu u vezi sa sličnima koji se ranije "
 "događaše na dalekoj južnoj granici, napadima nemrtvih. Desin izloži plan "
 "borbe protiv ovih upada."
 
@@ -167,7 +167,7 @@ msgstr ""
 "U danima kralja Gararda I, dva uporišta bijahu podignuta duž bliže obale "
 "Veldina, južno od Soradoka, da bi se spriječili upadi razbojnika i orkovskih "
 "pljačkaša iz Estmarka na teritoriju Vesnota. Ali u kasnijim godinama postaje "
-"Rječne garde bijehu napuštene, kako se naseljenici raširiše kroz Estmark, a "
+"Rječne garde bjehu napuštene, kako se naseljenici raširiše kroz Estmark, a "
 "orkovi prisilno povukoše sjeverno od Velike rijeke."
 
 #. [part]
@@ -203,7 +203,7 @@ msgid ""
 "watchmen..."
 msgstr ""
 "Sve pođe kako valja pošto su kraljeve snage pristigle. Nekoliko sedmica ne "
-"biješe nijednog napada, te Gvedrijevi vojnici počeše da se opuštaju. I onda, "
+"bješe nijednog napada, te Gvedrijevi vojnici počeše da se opuštaju. I onda, "
 "jednog dana u zoru, Gvedrija i njegove ljude trgoše zapanjeni krici noćne "
 "straže..."
 
@@ -672,15 +672,15 @@ msgstr ""
 "Hvala vam. Pozivam vas da nam se pridružite. Nemrtvi su ovim zemljama, "
 "pronaći će ove pećine prije ili kasnije."
 
-# well-spelled: Нећ
+# |, no-check-spell, no-hybdl
 #. [message]: speaker=unit
 #: data/campaigns/Eastern_Invasion/scenarios/02.The_Escape_Tunnel.cfg:194
 msgid ""
 "My clan ha' lived in these caves for centuries. We'll no' be scattered now "
 "by a few undead."
 msgstr ""
-"Moj klan živ' u ovim pećinama već vijekovima. Neć' nas sad razbacati šačica "
-"nemrtvaca."
+"Moj klan živ' u ovim pećinama već v’jekovima. Neće nas sad razbacat šač’ca "
+"nemrtvi’."
 
 #. [message]: speaker=Dacyn
 #: data/campaigns/Eastern_Invasion/scenarios/02.The_Escape_Tunnel.cfg:198
@@ -1675,7 +1675,7 @@ msgstr ""
 #. [message]: speaker=Wak-Rano
 #: data/campaigns/Eastern_Invasion/scenarios/06.Two_Paths.cfg:134
 msgid "Perhaps he will die, and I will win our battle without fighting."
-msgstr ""
+msgstr "Možda će poginuti, a ja ću dobiti i našu bitku bez borbe."
 
 #. [message]: speaker=Mal-Arnai
 #: data/campaigns/Eastern_Invasion/scenarios/06.Two_Paths.cfg:138
@@ -2863,7 +2863,7 @@ msgid ""
 "advisor."
 msgstr ""
 "Najveći vidovnjak u kraljevstvu, Galdren, predvidje da će se jednog dana, "
-"uskoro, veliko zlo raširiti zemljom. Kralj, prirodno, biješe zabrinut. "
+"uskoro, veliko zlo raširiti zemljom. Kralj, prirodno, bješe zabrinut. "
 "Vidovnjak mu kaza da je jedini način da se zlo zaustavi, taj da se imenuje "
 "jedan mag, dobro upućen u vještine borbe protiv duhova tame, za kraljevog "
 "savjetnika."
