--- a/po/wesnoth-httt/sr@ijekavianlatin.po
+++ b/po/wesnoth-httt/sr@ijekavianlatin.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-httt\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-10 12:33+0200\n"
-"PO-Revision-Date: 2010-04-05 17:47+0200\n"
-"Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
+"PO-Revision-Date: 2010-04-28 14:41+0200\n"
+"Last-Translator: Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -827,7 +827,7 @@ msgid ""
 "Quick, we must make our escape!"
 msgstr ""
 "Toliko poganih ljudi što jašu na konjima! Ne možemo ih nikako pobijediti. "
-"Brzo, moramo izbjeći odavde!"
+"Brzo, moramo izbjeći odavdje!"
 
 #. [message]: speaker=Kaylan
 #: data/campaigns/Heir_To_The_Throne/scenarios/02_Blackwater_Port.cfg:443
@@ -1199,7 +1199,7 @@ msgstr "Ali... ali... kako se ovo može meni dogoditi?"
 #. [message]: speaker=second_unit
 #: data/campaigns/Heir_To_The_Throne/scenarios/04_The_Bay_of_Pearls.cfg:299
 msgid "Who was that idiot?"
-msgstr "Ko beše ta budala?"
+msgstr "Ko bješe ta budala?"
 
 # |, no-check-spell
 #. [unit]: id=Gwaba, type=Merman Fighter
@@ -1464,9 +1464,9 @@ msgid ""
 "It is north-west of here, a few leagues inland. There are two ways to go, by "
 "ship or on foot. Each has its own dangers. You must choose between them."
 msgstr ""
-"Elensefar leži sjeverozapadno odavde, nekoliko liga u unutrašnjosti. Može se "
-"dosegnuti na dva načina, brodom ili pješke. Oba imaju svojih opasnosti, i na "
-"tebi je da izabereš jedan od njih."
+"Elensefar leži sjeverozapadno odavdje, nekoliko liga u unutrašnjosti. Može "
+"se dosegnuti na dva načina, brodom ili pješke. Oba imaju svojih opasnosti, i "
+"na tebi je da izabereš jedan od njih."
 
 #. [option]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/04_The_Bay_of_Pearls.cfg:773
@@ -1525,7 +1525,7 @@ msgid ""
 "falls, there is no telling how many other lands she may swallow up!"
 msgstr ""
 "Donosim loše vijesti. Aševira je podigla opsadu oko Elensefara, prekršivši "
-"sporazum između Vesnota i grada-države Elense, koji je važio već ceo vijek. "
+"sporazum između Vesnota i grada-države Elense, koji je važio već cio vijek. "
 "Ako grad padne, neće se znati broja zemljama koje će Aševira još progutati!"
 
 #. [message]: speaker=Konrad
@@ -2233,7 +2233,7 @@ msgid ""
 "The turbulent waters hid a nearly invisible ford, wide enough for two "
 "soldiers to march shoulder-to-shoulder."
 msgstr ""
-"Na Konradovo iznenađenje, prilike brzo pregaziše preko usta reke. "
+"Na Konradovo iznenađenje, prilike brzo pregaziše preko usta rijeke. "
 "Zapjenušana voda skrivala je gotovo nevidljiv plićak, dovoljno širok da dva "
 "vojnika koračaju jedan pored drugog."
 
@@ -2256,7 +2256,7 @@ msgstr "Konačno povratismo grad! Odmorimo se sada, prijatelji."
 #. [message]: role=Thief
 #: data/campaigns/Heir_To_The_Throne/scenarios/06_The_Siege_of_Elensefar.cfg:518
 msgid "Victory! The thieves of Elensefar will be in your service, my lord."
-msgstr "Pobeda! Lopovi Elensefara su vam od sada na usluzi, gospodaru."
+msgstr "Pobjeda! Lopovi Elensefara su vam od sada na usluzi, gospodaru."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Heir_To_The_Throne/scenarios/06_The_Siege_of_Elensefar.cfg:523
@@ -2330,7 +2330,7 @@ msgstr ""
 "knalganski patuljci na molbu kralja Haldrika Drugog, za šta su njihovim "
 "najvještijim kovačima trebale godine. Ubrzo pošto je sačinjeno, na njegove "
 "tvorce udariše vilenjaci i prognaše ih u podzemlje. Niko ne zna šta se tu "
-"zbilo, ali Žezlo bi izgubljeno negde u velikim pećinama. Godine su "
+"zbilo, ali Žezlo bi izgubljeno negdje u velikim pećinama. Godine su "
 "prolazile, sudbinu patuljaka pratile plime i oseke, ali Žezlo otada ne bi "
 "pronađeno."
 
@@ -2457,8 +2457,8 @@ msgid ""
 "sparsely populated western countryside for a time. However, their luck did "
 "not hold."
 msgstr ""
-"Mala kakva je bila, Konradova vojska neko vrijeme beše teško uočljiva u "
-"rijetko naseljenim zapadnim predelima. Ali, ta im se sreća ne održa zadugo."
+"Mala kakva je bila, Konradova vojska neko vrijeme bješe teško uočljiva u "
+"rijetko naseljenim zapadnim predjelima. Ali, ta im se sreća ne održa zadugo."
 
 #. [side]: type=Orcish Warlord, id=Kojun Herolm
 #: data/campaigns/Heir_To_The_Throne/scenarios/07_Crossroads.cfg:166
@@ -2546,7 +2546,7 @@ msgstr ""
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/07_Crossroads.cfg:531
 msgid "Victory is ours, men. Let us proceed northeast!"
-msgstr "Pobeda je naša, ljudi. Produžimo na sjeveroistok!"
+msgstr "Pobjeda je naša, ljudi. Produžimo na sjeveroistok!"
 
 #. [scenario]: id=08_The_Princess_of_Wesnoth
 #: data/campaigns/Heir_To_The_Throne/scenarios/08_The_Princess_of_Wesnoth.cfg:4
@@ -2783,8 +2783,8 @@ msgid ""
 "small>"
 msgstr ""
 "<span color='white'>Alternativni cilj:</span>\n"
-"<span color='green'>Istrebiš li kosce</span> <small>(bonus za rani završetak)"
-"</small>"
+"<span color='green'>Istrijebiš li kosce</span> <small>(bonus za rani "
+"završetak)</small>"
 
 # |, no-check-spell
 #. [side]: type=Lich, id=Galga
@@ -3056,7 +3056,7 @@ msgid ""
 "we do, we must pass by this place."
 msgstr ""
 "Mogli bismo pokušati, ali moramo biti oprezni. Uznemiravanje grifona se može "
-"pokazati opasnim... pa ipak, takve bi nam zveri kasnije mogle izvrsno "
+"pokazati opasnim... pa ipak, takve bi nam zvjeri kasnije mogle izvrsno "
 "poslužiti. Šta god da učinimo, moramo proći kroz ove predjele."
 
 #. [message]: speaker=Konrad
@@ -3112,7 +3112,8 @@ msgid ""
 msgstr ""
 "Moramo nastaviti ka sjeveru. Prekasno je da se vratimo u bezbjednost "
 "Elensefara ili Aldujina, prije nego što zima stegne. Stoga nam je prijeći "
-"veliku reku i nastaviti prema patuljačkim zemljama. Požurite, krenimo odmah!"
+"veliku rijeku i nastaviti prema patuljačkim zemljama. Požurite, krenimo "
+"odmah!"
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/10_Gryphon_Mountain.cfg:243
@@ -3240,7 +3241,7 @@ msgid ""
 "lands, but they are now filled only with chaos. This is where your father "
 "and uncle were betrayed, almost nineteen years ago now, Konrad."
 msgstr ""
-"Evo gaza Abeza. Kako prijeđemo reku, napustićemo Vesnot i zaći u zemlje "
+"Evo gaza Abeza. Kako prijeđemo rijeku, napustićemo Vesnot i zaći u zemlje "
 "Sjevera. Patuljci nekada vladaše ovim zemljama, ali su sada ispunjene "
 "metežom. Ovo je mesto gdje tvoj otac i stric bijehu izdani, prije skoro "
 "devetnaest godina, Konrade."
@@ -3259,8 +3260,9 @@ msgid ""
 "northern armies crossed and attacked us."
 msgstr ""
 "Kraljeve snage bile su ulogorene ovdje, a sjevernjačke na sjevernoj obali "
-"reke. Tri dana i tri noći vojske su stajale jedna naspram druge, nevoljne da "
-"prezage rijeku. Četvrtog dana, sjevernjačke snage prijeđoše i napadoše nas."
+"rijeke. Tri dana i tri noći vojske su stajale jedna naspram druge, nevoljne "
+"da prezage rijeku. Četvrtog dana, sjevernjačke snage prijeđoše i napadoše "
+"nas."
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/11_The_Ford_of_Abez.cfg:200
@@ -3397,7 +3399,7 @@ msgid ""
 "must be allowed more time to hatch. Quickly!"
 msgstr ""
 "Ne opet ona! Moramo požuriti! Ne zaboravite na grifonska jaja, treba im dati "
-"još vremena da se izlegu. Brzo!"
+"još vremena da se izlijegu. Brzo!"
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/11_The_Ford_of_Abez.cfg:278
@@ -3648,9 +3650,10 @@ msgid ""
 "compelling. And so after many days of rest, the party set out once again for "
 "the dwarven kingdom..."
 msgstr ""
-"Konrad konačno odluči da ne može čekati da grifoni dovoljno stasaju, usled "
-"insistiranja Delfadora da se žezlo mora što prije pronaći. I tako, poslije "
-"mnogo dana odmora, družina se ponovo otisnu ka patuljačkom kraljevstvu..."
+"Konrad konačno odluči da ne može čekati da grifoni dovoljno stasaju, usljed "
+"Delfadorovog istrajavanja da se žezlo mora što prije pronaći. I tako, "
+"poslije mnogo dana odmora, družina se ponovo otisnu ka patuljačkom "
+"kraljevstvu..."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Heir_To_The_Throne/scenarios/12_Northern_Winter.cfg:356
@@ -4989,7 +4992,7 @@ msgid ""
 "power of it!"
 msgstr ""
 "Žezlo... i zemlja... istopljena lava... vatra... vazduh oko nas... sve. "
-"Doziva prestolonaslijednika — jedva ga mogu zadržati u svom umu. Ovde je "
+"Doziva prestolonaslijednika — jedva ga mogu zadržati u svom umu. Ovdje je "
 "iskovano, nedaleko na sjever od mjesta gdje sada stojimo. Oh, sama njegova "
 "moć!"
 
@@ -5164,7 +5167,7 @@ msgid ""
 "another, or else all perish!"
 msgstr ""
 "Mir, prijatelji! Iako su tuneli iza nas, teško da smo bezbjedni. Nalazimo se "
-"negde u opustošenim i divljim sjevernjačkim zemljama, to je sve što znamo. "
+"negdje u opustošenim i divljim sjevernjačkim zemljama, to je sve što znamo. "
 "Gledajte! Na sjeveru orkovi, na jugu mračne horde. Mir među nama mora još "
 "potrajati, inače smo propali!"
 
@@ -5274,7 +5277,7 @@ msgid ""
 "it is an option and you should consider it, my lord."
 msgstr ""
 "Prinče Konrade, vi i vaši prijatelji često pominjete da Arkan-toriju treba "
-"izbeći. Ali vas mi možemo povesti niz nju. Uz pomoć nas morejaca, riječnim "
+"izbjeći. Ali vas mi možemo povesti niz nju. Uz pomoć nas morejaca, riječnim "
 "putem mogli biste doseći dom sjevernjačkih vilenjaka mnogo prije nego ikojim "
 "od kopnenih puteva. Ne mogu vam obećati bezbjedno putovanje jer ne znam šta "
 "leži pred nama, ali je to mogućnost o kojoj biste mogli porazmisliti, "
@@ -5366,7 +5369,7 @@ msgid ""
 msgstr ""
 "Vilenjački gospodaru, ja ovdje zapovijedam. Vijećao sam sa morejcima, i oni "
 "vjeruju da mogu ispratiti put niz rijeku i preko vodopadâ. Krenućemo "
-"najneposrednijim putem ka tvojoj domovini i izbeći stisku sjevernjačkih "
+"najneposrednijim putem ka tvojoj domovini i izbjeći stisku sjevernjačkih "
 "vojski što se roje divljinom."
 
 #. [message]: speaker=Delfador
@@ -5834,7 +5837,7 @@ msgstr "Litice Torije"
 #: data/campaigns/Heir_To_The_Throne/scenarios/19c_Cliffs_of_Thoria.cfg:75
 #: data/campaigns/Heir_To_The_Throne/scenarios/19c_Cliffs_of_Thoria.cfg:1070
 msgid "Make it to the end of the river"
-msgstr "Dosegneš li kraj reke"
+msgstr "Dosegneš li kraj rijeke"
 
 #. [side]
 #. [side]: type=Saurian Oracle, id=Szerkz
@@ -6112,7 +6115,7 @@ msgid ""
 "So be it. We have to go down the river; we have no choice. We'll fight our "
 "way through if necessary."
 msgstr ""
-"Onda tako mora biti. Moramo niz reku, izbora nemamo. Ako nema druge, "
+"Onda tako mora biti. Moramo niz rijeku, izbora nemamo. Ako nema druge, "
 "borićemo se."
 
 #. [message]: speaker=Keh Ohn
@@ -6178,7 +6181,7 @@ msgid ""
 "as possible to pay with their lives. They have defied us, and now they will "
 "meet the same fate as their leader!"
 msgstr ""
-"Nastavite niz reku. Kad smo već pri tome, natjerajmo što je više zmagova "
+"Nastavite niz rijeku. Kad smo već pri tome, natjerajmo što je više zmagova "
 "moguće da životima plate. U svom prkosu doživjeće istu sudbinu kao i njihov "
 "poglavar!"
 
@@ -6927,7 +6930,7 @@ msgid ""
 msgstr ""
 "Pozdravi, i dobrodošli u našu prijestonicu. Treba da se osjećate "
 "počastvovanim. Prođe pola vijeka — jedna generacija po računu vaše rase — od "
-"kako je neki čovek smatran dovoljno velikim prijateljem vilenjaka da bi "
+"kako je neki čovjek smatran dovoljno velikim prijateljem vilenjaka da bi "
 "mogao stajati ovdje, u Elensiriji."
 
 #. [message]: speaker=Konrad
@@ -7086,8 +7089,8 @@ msgid ""
 msgstr ""
 "Onda, Žezlo je kod mene! Vratiću se i narod će me prihvatiti za kraljicu! "
 "Moja majka je tek kraljica majka. Tron je po pravdi meni namijenjen, i "
-"vladaću pravedno i pošteno. Možda ću i tebe, Delfadore, primiti za savetnika "
-"i poverenika."
+"vladaću pravedno i pošteno. Možda ću i tebe, Delfadore, primiti za "
+"savjetnika i povjerenika."
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/21_Elven_Council.cfg:185
@@ -7834,8 +7837,8 @@ msgid ""
 "out their evil orders."
 msgstr ""
 "Bitka je bila duga i teška. Poraz nam je bio neizbježan. Sa Eldredom mrtvim, "
-"znao sam da će Aševirin gnjev biti neizmeran. Toliko će nevinih biti "
-"posečeno. Morao sam služim kraljevstvu. Morao sam da spasim prinčeve. "
+"znao sam da će Aševirin gnjev biti neizmijeran. Toliko će nevinih biti "
+"posječeno. Morao sam služim kraljevstvu. Morao sam da spasim prinčeve. "
 "Požurio sam ka Veldinu, da prestignem Aševirinu gardu sa njihovim opakim "
 "naređenjima."
 
@@ -8295,7 +8298,7 @@ msgstr ""
 "Čin zapovjednika imaju oni što vode bojne sastave u bitku. Njihove veštine "
 "vođstva poboljšavaju borbeni učinak jedinica u susjednim poljima. "
 "Zapovjednici su sami najvještiji s mačem, ali nose i luk za slučajeve gdje "
-"zatreba. Izgubi li se zapovednik, izgubljena je i bitka."
+"zatreba. Izgubi li se zapovjednik, izgubljena je i bitka."
 
 #. [unit_type]: id=Dark Queen, race=human
 #: data/campaigns/Heir_To_The_Throne/units/Dark_Queen.cfg:4
@@ -8539,8 +8542,8 @@ msgid ""
 "impact: 40%\n"
 "fire:  +10%"
 msgstr ""
-"Oklop praznine posjeduje sledeće otpornosti:\n"
-"sečivo: 50%\n"
+"Oklop praznine posjeduje sljedeće otpornosti:\n"
+"sječivo: 50%\n"
 "proboj: 40%\n"
 "udar:   40%\n"
 "vatra: +10%"
@@ -8651,11 +8654,11 @@ msgid ""
 "the heat of battle, Eldred's men turned on the king. And so, Garard was "
 "slain in battle that day, along with his brother and all his sons but Eldred."
 msgstr ""
-"Eldred beše hrabar i odvažan ratnik, i sposoban da dobro vodi svoje vojnike. "
-"Na nesreću po Gararda, njegov sin takođe beše nadobudan... i prevrtljiv. U "
-"žestini bitke, Eldredovi ljudi se okrenuše protiv kralja. I tako, Garard "
-"beše tog dana posečen u bici, zajedno sa svojim bratom i svim sinovima, osim "
-"Eldreda."
+"Eldred bješe hrabar i odvažan ratnik, i sposoban da dobro vodi svoje "
+"vojnike. Na nesreću po Gararda, njegov sin takođe bješe nadobudan... i "
+"prevrtljiv. U žestini bitke, Eldredovi ljudi se okrenuše protiv kralja. I "
+"tako, Garard bješe tog dana posječen u bici, zajedno sa svojim bratom i svim "
+"sinovima, osim Eldreda."
 
 #. [part]
 #: data/campaigns/Heir_To_The_Throne/utils/intro.cfg:18
@@ -8698,7 +8701,7 @@ msgid ""
 msgstr ""
 "Eldred stupi u boj sa Delfadorovim snagama, dok mu je majčin savjet "
 "odjekivao u ušima: „Ne udari na velikog niti na malog, već jedino na starog "
-"maga, kome glavu sa ramena treba saseći.“"
+"maga, kome glavu sa ramena treba sasjeći.“"
 
 #. [part]
 #: data/campaigns/Heir_To_The_Throne/utils/intro.cfg:34
@@ -8717,7 +8720,7 @@ msgid ""
 "In the end Delfador's men were defeated and routed, but Asheviere found her "
 "son's lifeless body, fixed to the ground by the great mage's staff."
 msgstr ""
-"Na koncu, Delfadorovi ljudi bejahu poraženi i razbijeni, ali Aševira nađe "
+"Na koncu, Delfadorovi ljudi bijahu poraženi i razbijeni, ali Aševira nađe "
 "beživotno tijelo svog sina, pribijenog za zemlju štapom velikog maga."
 
 #. [part]
@@ -8727,7 +8730,7 @@ msgid ""
 "Knowing that the king's young nephews were next in line to the throne, she "
 "ordered them all killed, and declared herself Queen of Wesnoth."
 msgstr ""
-"Aševira sama preuze zapovedništvo nad vojskom i povede je nazad u Veldin. "
+"Aševira sama preuze zapovjedništvo nad vojskom i povede je nazad u Veldin. "
 "Znajući da su kraljevi mladi nećaci sljedeći po redu za tron, ona naredi da "
 "se svi pobiju, a sebe proglasi Kraljicom Vesnota."
 
