--- a/po/wesnoth-l/sr@ijekavianlatin.po
+++ b/po/wesnoth-l/sr@ijekavianlatin.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-l\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-10 12:33+0200\n"
-"PO-Revision-Date: 2010-04-05 17:37+0200\n"
-"Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
+"PO-Revision-Date: 2010-04-28 14:52+0200\n"
+"Last-Translator: Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -949,7 +949,7 @@ msgid ""
 msgstr ""
 "Pa, ne zalaze unutar zidina moga grada. Zapravo su ulogoreni u blizini, a "
 "glavni garnizon je podalje na jugu, kod Halsteda. Znam da će uskoro i meni "
-"doći vreme da se zakunem na odanost, ali me ne pritiskaju. Plaše se da ću "
+"doći vrijeme da se zakunem na odanost, ali me ne pritiskaju. Plaše se da ću "
 "odbiti."
 
 #. [message]: speaker=Baldras
@@ -1162,8 +1162,8 @@ msgid ""
 "city of Carcyn."
 msgstr ""
 "Neumorno proganjani jahačima što izviđaše drum ka Elensefaru, Baldras i "
-"njegovi ljudi provukoše se neprimećeni duž močvarnih obala Velike reke, sve "
-"do grada Karsina."
+"njegovi ljudi provukoše se neprimećeni duž močvarnih obala Velike rijeke, "
+"sve do grada Karsina."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Liberty/scenarios/05_Hide_and_Seek.cfg:447
@@ -1359,7 +1359,7 @@ msgid ""
 "attack a caravan head-on. It's not noble work, but our pursuits require "
 "plenty of gold."
 msgstr ""
-"Ja sam Helikrom, a tebi je bolje da ne budeš tako slatkorječiv. Zapovedam "
+"Ja sam Helikrom, a tebi je bolje da ne budeš tako slatkorječiv. Zapovijedam "
 "opasnim ljudima. Moji najamnici umiju kliznuti neprimijećeni kroz svaki "
 "grad, opljačkati čovjeka na spavanju, ili napasti karavan s čela. Djela ne "
 "baš plemenita, ali naša zanimanja zahtijevaju obilje zlata."
@@ -1426,7 +1426,7 @@ msgid ""
 "home to a lich and two of its underling necromancers. Our experiments may "
 "have actually aroused it from sleep... we're not exactly sure."
 msgstr ""
-"U posljednje vreme Karsin je neprekidno maglovit, jer ove šume nedavno "
+"U posljednje vrijeme Karsin je neprekidno maglovit, jer ove šume nedavno "
 "postadoše dom jednom koscu i dvojici njegovih podaničkih nekromanata. Možda "
 "su ga baš naši eksperimenti razbudili... nismo sasvim sigurni."
 
@@ -1606,7 +1606,7 @@ msgid ""
 "Wesnoth, and some of them were willing to resist it."
 msgstr ""
 "Dok su napredovali, mnogi muškarci i žene iz seocadi razbacanih oko Karsina "
-"i Sjedošumlja približiše se družini, s namerom da se pridruže. Uspon "
+"i Sjedošumlja približiše se družini, s namjerom da se pridruže. Uspon "
 "kraljičin baci mučan pokrov nad stanovnike Vesnota, neki od kojih bijehu "
 "voljni da pruže otpor."
 
@@ -1628,7 +1628,7 @@ msgid ""
 "of action..."
 msgstr ""
 "Ulogoreni na rubu šume, tiho su posmatrali zamašne pokrete snaga iz pravca "
-"Aldrila, obližnjeg grada, gde polaze na sjeverozapad. Nesigurni šta to "
+"Aldrila, obližnjeg grada, gdje polaze na sjeverozapad. Nesigurni šta to "
 "znači, raspravljaše o svojim narednim koracima..."
 
 # |, no-check-spell
@@ -1841,7 +1841,7 @@ msgstr ""
 msgid ""
 "Send word to Helicrom that we are ready. It is time for him to repay his "
 "debt."
-msgstr "Obavijestite Helikroma da smo spremni. Vreme mu je da vrati dug."
+msgstr "Obavijestite Helikroma da smo spremni. Vrijeme mu je da vrati dug."
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:372
@@ -1865,7 +1865,7 @@ msgid ""
 "separated the human cities surrounding Weldyn and the coastal regions of "
 "Elensefar."
 msgstr ""
-"Godine Vesnota 161., 338 godina prije Aševirine izdaje, novokrunisani kralj "
+"Godine Vesnota 161, 338 godina prije Aševirine izdaje, novokrunisani kralj "
 "požele da učini bezbjednom, jednom i za svagda, divljinu koja razdvajaše "
 "ljudske gradove oko Veldina i priobalna područja Elensefara."
 
@@ -2143,7 +2143,7 @@ msgid ""
 "Baldras, Gwydion is Lord Maddock's son. This battle isn't just about Annuvin "
 "anymore."
 msgstr ""
-"Baldrase, Gvidion je sin gospodara Madoka. Ovde se više ne bije bitka samo "
+"Baldrase, Gvidion je sin gospodara Madoka. Ovdje se više ne bije bitka samo "
 "za Anuvin."
 
 #. [message]: speaker=narrator
@@ -2203,7 +2203,7 @@ msgid ""
 "sides, while the remainder came to rest several hundred feet below ground, "
 "in the bowels of the hollowed-out mountain."
 msgstr ""
-"Uz gromoglasne potrese i neizmerne klobuke prašine, hiljade tona kamena i "
+"Uz gromoglasne potrese i neizmijerne klobuke prašine, hiljade tona kamena i "
 "drveta uruši se samo u sebe. Nešto se preli preko obronaka, a ostatak se "
 "surva nekoliko stotina stopa pod zemlju, u grotlo izdubljene planine."
 
@@ -2226,7 +2226,7 @@ msgstr ""
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:882
 msgid "Men, help me out of here! I am trapped under this rubble."
-msgstr "Ljudi, vadite me odavde! Zarobljen sam pod ruševinom."
+msgstr "Ljudi, vadite me odavdje! Zarobljen sam pod ruševinom."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:886
@@ -2408,7 +2408,7 @@ msgid ""
 "Maddock's men were successfully using tactics Baldras had mastered and used "
 "during his resistance."
 msgstr ""
-"Baldras tek što je prešao Veliku reku kada glasine o noćovrebačima prožeše "
+"Baldras tek što je prešao Veliku rijeku kada glasine o noćovrebačima prožeše "
 "njegove redove. Uz gorak osmijeh, uvidje da su ljudi gospodara Madoka "
 "uspješno primjenjivali taktike kojima je on ovladao i upotrijebio za "
 "sopstveni otpor."
@@ -2494,7 +2494,7 @@ msgstr ""
 "Nekada veliki ratnici i generali, prokleti mržnjom i strahom, vratiše se na "
 "ovaj svijet kao mrtvi vitezovi. Mrtve štitonoše služe im dok ne sakupe "
 "dovoljno nesvete moći da sami postanu mrtvi vitezovi. U tom procesu preuzeli "
-"su dobar deo vitezove moći, uključujući i sposobnost zapovijedanja nižnjima."
+"su dobar dio vitezove moći, uključujući i sposobnost zapovijedanja nižnjima."
 
 #. [attack]: type=blade
 #: data/campaigns/Liberty/units/Death_Squire.cfg:31
@@ -2746,7 +2746,7 @@ msgid ""
 "and swamps."
 msgstr ""
 "Traperi su umješni lovci koji snabdijevaju hranom i krznom i po nekoliko "
-"sela. Lovačko iskustvo čini ih najvrednijim noću i u šumama i močvarama."
+"sela. Lovačko iskustvo čini ih najvrjednijim noću i u šumama i močvarama."
 
 #. [unit_type]: id=Huntsman_Peasant
 #: data/campaigns/Liberty/units/Villagers.cfg:176
@@ -2782,7 +2782,7 @@ msgstr ""
 #: data/campaigns/Liberty/utils/utils.cfg:66
 msgid ""
 "There is a strange altar here and a pendant on it. I don't want to touch it."
-msgstr "Ovde nekakav čudan oltar i visak o njemu. Ne bih da ga diram."
+msgstr "Ovdje nekakav čudan oltar i visak o njemu. Ne bih da ga diram."
 
 #. [effect]: type=arcane
 #: data/campaigns/Liberty/utils/utils.cfg:79
