--- a/po/wesnoth-low/sr@ijekavian.po
+++ b/po/wesnoth-low/sr@ijekavian.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-low\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-10 12:33+0200\n"
-"PO-Revision-Date: 2010-04-05 17:37+0200\n"
-"Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
+"PO-Revision-Date: 2010-04-28 15:15+0200\n"
+"Last-Translator: Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -312,7 +312,7 @@ msgid ""
 msgstr ""
 "Можда су старјешине осјетиле да ће неизвијесна времена захтијевати довитљиве "
 "умове; у те године људи са Зеленострва утврђивали су се јужно од Велике "
-"ријеке, а познати свијет мењао брже него хиљадама година уназад."
+"ријеке, а познати свијет мијењао брже него хиљадама година уназад."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/01_The_Uprooting.cfg:53
@@ -1099,13 +1099,12 @@ msgstr ""
 
 #. [message]: id=Galtrid
 #: data/campaigns/Legend_of_Wesmere/scenarios/03_Kalian.cfg:877
-#, fuzzy
 msgid ""
 "What 'stone', foul and clumsy orc? Your lips are not fit even to name the "
 "citadel of the Ka'lian, for it has stood since before your kind crawled into "
 "sunlight and will endure long after you are forgotten!"
 msgstr ""
-" Какав то „камен“, погани и неспретни орче? Срам да те је да узимаш у уста "
+"Какав то „камен“, погани и неспретни орче? Срам да те је да узимаш у уста "
 "утврду калијанску, која је стајала још прије него што је твоја сорта "
 "изгмизала под сунце и стајаће пошто будете давно заборављени!"
 
@@ -1474,7 +1473,7 @@ msgid ""
 "We have recovered much more than our own treasure. These saurians would seem "
 "to have taken up robbery as a vocation!"
 msgstr ""
-"Измерисмо блага много више него што је нашег. Ови су се сауријанци изгледа "
+"Измјерисмо блага много више него што је нашег. Ови су се сауријанци изгледа "
 "прихватили пљачке као позива!"
 
 #. [message]: id=Spahr
@@ -1510,8 +1509,8 @@ msgid ""
 "To evade the saurians blocking the eastern approaches to Wesmere, Kalenz and "
 "his war-band moved to enter Wesmere Forest from a different direction ..."
 msgstr ""
-"Како би избегли сауријанске запреке на источним прилазима Весмеру, Каленз и "
-"његова војна пођоше у Весмерску шуму из другог правца..."
+"Како би избјегли сауријанске запреке на источним прилазима Весмеру, Каленз и "
+"његова ратна дружина пођоше у Весмерску шуму из другог правца..."
 
 # |, no-check-spell
 #. [side]: type=Orcish Warlord, id=Urug-Tar
@@ -1569,7 +1568,7 @@ msgid ""
 "Olurf, we cannot let you have all the fun here! "
 msgstr ""
 "Наши непријатељи су оркови, не патуљци. Поред тога, оркови су нам "
-"препријечили пут. Олурфе, не можемо ти препустити сав пир овде!"
+"препријечили пут. Олурфе, не можемо ти препустити сав пир овдје!"
 
 #. [message]: id=Olurf
 #: data/campaigns/Legend_of_Wesmere/scenarios/06_Acquaintance_in_Need.cfg:260
@@ -1589,8 +1588,8 @@ msgid ""
 "We must put aside our differences and ally against the orcish menace. Olurf, "
 "join us!"
 msgstr ""
-"Морамо заборавити на размирице и удружити се против орковске претње. Олурфе, "
-"придружи нам се!"
+"Морамо заборавити на размирице и удружити се против орковске пријетње. "
+"Олурфе, придружи нам се!"
 
 #. [message]: id=Olurf
 #: data/campaigns/Legend_of_Wesmere/scenarios/06_Acquaintance_in_Need.cfg:278
@@ -2411,7 +2410,7 @@ msgid ""
 "I, too, feel we are in great danger. We should stay close together and move "
 "very carefully."
 msgstr ""
-"И ја осећам да смо у великој опасности. Треба да се не раздвајамо и врло "
+"И ја осјећам да смо у великој опасности. Треба да се не раздвајамо и врло "
 "пажљиво напредујемо."
 
 #. [message]: speaker=unit
@@ -3001,7 +3000,7 @@ msgstr ""
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/12_Revelations.cfg:220
 msgid "What undesirable effects?"
-msgstr "Какве нежељене последице?"
+msgstr "Какве нежељене посљедице?"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/12_Revelations.cfg:225
@@ -3169,7 +3168,7 @@ msgid ""
 "the fortified human settlement at Tath. The humans are sending all their "
 "forces there. We need to decide whether we will help them or not."
 msgstr ""
-"Орковске снаге улогорене су јужно од Велике реке, и опкољавају утврђену "
+"Орковске снаге улогорене су јужно од Велике ријеке, и опкољавају утврђену "
 "људску насеобину код Тата. Људи тамо шаљу све своје снаге. Морамо одлучити "
 "хоћемо ли им помоћи."
 
@@ -3279,7 +3278,7 @@ msgid ""
 "Our reinforcements should arrive in a few days."
 msgstr ""
 "Генерал Алдар је примио твоју поруку. Тражи да ударите на орковска појачања "
-"са сјевера, спречите их да се придруже овдашњим саборцима. Тим свјежим "
+"са сјевера, спријечите их да се придруже овдашњим саборцима. Тим свјежим "
 "снагама не смије се допустити да ступе у битку! Наша појачања стижу за који "
 "дан."
 
@@ -3422,8 +3421,8 @@ msgid ""
 "welcome any ally against it."
 msgstr ""
 "Краљу Халдриче, радује ме што чујем такве ријечи. Суочени смо с опасним "
-"противницима. Намјера нам је да окончамо ову претњу, и добро је дошао сваки "
-"савезник против ње."
+"противницима. Намјера нам је да окончамо ову пријетњу, и добро је дошао "
+"сваки савезник против ње."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/15_The_Treaty.cfg:24
@@ -4186,7 +4185,7 @@ msgstr "Хгир"
 #: data/campaigns/Legend_of_Wesmere/scenarios/19_Costly_Revenge.cfg:190
 msgid "That was the last. A bitter day's work, and no memory to be proud of."
 msgstr ""
-"То бијеше последњи. Горка ли дана, испословасмо сјећање којим се нећемо "
+"То бијеше посљедњи. Горка ли дана, испословасмо сјећање којим се нећемо "
 "поносити."
 
 #. [message]: id=Landar
@@ -4340,7 +4339,7 @@ msgstr ""
 "времена да се саветујемо с вама, не би ли смо испустили прилике из шака и "
 "тиме рат још развукли и платили већу цијену. Осим тога, сви наши поступци "
 "допринијели су нашој ствари: оркови су сада у међусобном сукобу, сјеверни "
-"вилењаци су слободни, а сауријанци више нису претња."
+"вилењаци су слободни, а сауријанци више нису пријетња."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/20_Council_ruling.cfg:35
@@ -4348,8 +4347,8 @@ msgid ""
 "The council is not blind to these benefits. But, still, you cannot decide "
 "high matters of statecraft on behalf of the Elves. We cannot allow it."
 msgstr ""
-"Веће није слијепо за те користи. Свеједно, не можеш ти одлучивати о високим "
-"питањима државотворним у име свих вилењака. Не можемо то допустити."
+"Вијеће није слијепо за те користи. Свеједно, не можеш ти одлучивати о "
+"високим питањима државотворним у име свих вилењака. Не можемо то допустити."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/20_Council_ruling.cfg:40
@@ -4551,7 +4550,7 @@ msgstr ""
 #. [message]: id=Crintil
 #: data/campaigns/Legend_of_Wesmere/scenarios/21_Elvish_Assassins.cfg:425
 msgid "Too late! All traitors will die!"
-msgstr "Прекасно! Сви издајници ће умрети!"
+msgstr "Прекасно! Сви издајници ће умријети!"
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/21_Elvish_Assassins.cfg:429
@@ -4659,7 +4658,7 @@ msgstr ""
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/22_Northern_Battle.cfg:286
 msgid "We won!"
-msgstr "Победисмо!"
+msgstr "Побиједисмо!"
 
 #. [scenario]: id=23_End_of_War
 #: data/campaigns/Legend_of_Wesmere/scenarios/23_End_of_War.cfg:4
@@ -4846,7 +4845,7 @@ msgstr ""
 "већ и њихову дјецу. Отцијепљен од своје врсте њиховом смртношћу, бјежећи од "
 "одраза својих вољених у њиховим очима, напустио је дом и многе године лутао "
 "преко Великог континента. Често би пристизао у неочекиване тренутке и мјеста "
-"где је његов народ био у озбиљној невољи, избављајући их мудрошћу, магијом "
+"гдје је његов народ био у озбиљној невољи, избављајући их мудрошћу, магијом "
 "или својим свијетлим љутим сјечивом."
 
 #. [part]
