--- a/po/wesnoth-low/sr@ijekavianlatin.po
+++ b/po/wesnoth-low/sr@ijekavianlatin.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-low\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-10 12:33+0200\n"
-"PO-Revision-Date: 2010-04-05 17:37+0200\n"
-"Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
+"PO-Revision-Date: 2010-04-28 15:15+0200\n"
+"Last-Translator: Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -312,7 +312,7 @@ msgid ""
 msgstr ""
 "Možda su starješine osjetile da će neizvijesna vremena zahtijevati "
 "dovitljive umove; u te godine ljudi sa Zelenostrva utvrđivali su se južno od "
-"Velike rijeke, a poznati svijet menjao brže nego hiljadama godina unazad."
+"Velike rijeke, a poznati svijet mijenjao brže nego hiljadama godina unazad."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/01_The_Uprooting.cfg:53
@@ -1100,13 +1100,12 @@ msgstr ""
 
 #. [message]: id=Galtrid
 #: data/campaigns/Legend_of_Wesmere/scenarios/03_Kalian.cfg:877
-#, fuzzy
 msgid ""
 "What 'stone', foul and clumsy orc? Your lips are not fit even to name the "
 "citadel of the Ka'lian, for it has stood since before your kind crawled into "
 "sunlight and will endure long after you are forgotten!"
 msgstr ""
-" Kakav to „kamen“, pogani i nespretni orče? Sram da te je da uzimaš u usta "
+"Kakav to „kamen“, pogani i nespretni orče? Sram da te je da uzimaš u usta "
 "utvrdu kalijansku, koja je stajala još prije nego što je tvoja sorta "
 "izgmizala pod sunce i stajaće pošto budete davno zaboravljeni!"
 
@@ -1476,7 +1475,7 @@ msgid ""
 "We have recovered much more than our own treasure. These saurians would seem "
 "to have taken up robbery as a vocation!"
 msgstr ""
-"Izmerismo blaga mnogo više nego što je našeg. Ovi su se saurijanci izgleda "
+"Izmjerismo blaga mnogo više nego što je našeg. Ovi su se saurijanci izgleda "
 "prihvatili pljačke kao poziva!"
 
 #. [message]: id=Spahr
@@ -1512,8 +1511,8 @@ msgid ""
 "To evade the saurians blocking the eastern approaches to Wesmere, Kalenz and "
 "his war-band moved to enter Wesmere Forest from a different direction ..."
 msgstr ""
-"Kako bi izbegli saurijanske zapreke na istočnim prilazima Vesmeru, Kalenz i "
-"njegova vojna pođoše u Vesmersku šumu iz drugog pravca..."
+"Kako bi izbjegli saurijanske zapreke na istočnim prilazima Vesmeru, Kalenz i "
+"njegova ratna družina pođoše u Vesmersku šumu iz drugog pravca..."
 
 # |, no-check-spell
 #. [side]: type=Orcish Warlord, id=Urug-Tar
@@ -1571,7 +1570,7 @@ msgid ""
 "Olurf, we cannot let you have all the fun here! "
 msgstr ""
 "Naši neprijatelji su orkovi, ne patuljci. Pored toga, orkovi su nam "
-"prepriječili put. Olurfe, ne možemo ti prepustiti sav pir ovde!"
+"prepriječili put. Olurfe, ne možemo ti prepustiti sav pir ovdje!"
 
 #. [message]: id=Olurf
 #: data/campaigns/Legend_of_Wesmere/scenarios/06_Acquaintance_in_Need.cfg:260
@@ -1591,7 +1590,7 @@ msgid ""
 "We must put aside our differences and ally against the orcish menace. Olurf, "
 "join us!"
 msgstr ""
-"Moramo zaboraviti na razmirice i udružiti se protiv orkovske pretnje. "
+"Moramo zaboraviti na razmirice i udružiti se protiv orkovske prijetnje. "
 "Olurfe, pridruži nam se!"
 
 #. [message]: id=Olurf
@@ -2415,7 +2414,7 @@ msgid ""
 "I, too, feel we are in great danger. We should stay close together and move "
 "very carefully."
 msgstr ""
-"I ja osećam da smo u velikoj opasnosti. Treba da se ne razdvajamo i vrlo "
+"I ja osjećam da smo u velikoj opasnosti. Treba da se ne razdvajamo i vrlo "
 "pažljivo napredujemo."
 
 #. [message]: speaker=unit
@@ -3009,7 +3008,7 @@ msgstr ""
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/12_Revelations.cfg:220
 msgid "What undesirable effects?"
-msgstr "Kakve neželjene posledice?"
+msgstr "Kakve neželjene posljedice?"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/12_Revelations.cfg:225
@@ -3177,7 +3176,7 @@ msgid ""
 "the fortified human settlement at Tath. The humans are sending all their "
 "forces there. We need to decide whether we will help them or not."
 msgstr ""
-"Orkovske snage ulogorene su južno od Velike reke, i opkoljavaju utvrđenu "
+"Orkovske snage ulogorene su južno od Velike rijeke, i opkoljavaju utvrđenu "
 "ljudsku naseobinu kod Tata. Ljudi tamo šalju sve svoje snage. Moramo "
 "odlučiti hoćemo li im pomoći."
 
@@ -3287,7 +3286,7 @@ msgid ""
 "Our reinforcements should arrive in a few days."
 msgstr ""
 "General Aldar je primio tvoju poruku. Traži da udarite na orkovska pojačanja "
-"sa sjevera, sprečite ih da se pridruže ovdašnjim saborcima. Tim svježim "
+"sa sjevera, spriječite ih da se pridruže ovdašnjim saborcima. Tim svježim "
 "snagama ne smije se dopustiti da stupe u bitku! Naša pojačanja stižu za koji "
 "dan."
 
@@ -3431,8 +3430,8 @@ msgid ""
 "welcome any ally against it."
 msgstr ""
 "Kralju Haldriče, raduje me što čujem takve riječi. Suočeni smo s opasnim "
-"protivnicima. Namjera nam je da okončamo ovu pretnju, i dobro je došao svaki "
-"saveznik protiv nje."
+"protivnicima. Namjera nam je da okončamo ovu prijetnju, i dobro je došao "
+"svaki saveznik protiv nje."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/15_The_Treaty.cfg:24
@@ -4198,7 +4197,7 @@ msgstr "Hgir"
 #: data/campaigns/Legend_of_Wesmere/scenarios/19_Costly_Revenge.cfg:190
 msgid "That was the last. A bitter day's work, and no memory to be proud of."
 msgstr ""
-"To biješe poslednji. Gorka li dana, isposlovasmo sjećanje kojim se nećemo "
+"To biješe posljednji. Gorka li dana, isposlovasmo sjećanje kojim se nećemo "
 "ponositi."
 
 #. [message]: id=Landar
@@ -4352,7 +4351,7 @@ msgstr ""
 "vremena da se savetujemo s vama, ne bi li smo ispustili prilike iz šaka i "
 "time rat još razvukli i platili veću cijenu. Osim toga, svi naši postupci "
 "doprinijeli su našoj stvari: orkovi su sada u međusobnom sukobu, sjeverni "
-"vilenjaci su slobodni, a saurijanci više nisu pretnja."
+"vilenjaci su slobodni, a saurijanci više nisu prijetnja."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/20_Council_ruling.cfg:35
@@ -4360,8 +4359,8 @@ msgid ""
 "The council is not blind to these benefits. But, still, you cannot decide "
 "high matters of statecraft on behalf of the Elves. We cannot allow it."
 msgstr ""
-"Veće nije slijepo za te koristi. Svejedno, ne možeš ti odlučivati o visokim "
-"pitanjima državotvornim u ime svih vilenjaka. Ne možemo to dopustiti."
+"Vijeće nije slijepo za te koristi. Svejedno, ne možeš ti odlučivati o "
+"visokim pitanjima državotvornim u ime svih vilenjaka. Ne možemo to dopustiti."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/20_Council_ruling.cfg:40
@@ -4563,7 +4562,7 @@ msgstr ""
 #. [message]: id=Crintil
 #: data/campaigns/Legend_of_Wesmere/scenarios/21_Elvish_Assassins.cfg:425
 msgid "Too late! All traitors will die!"
-msgstr "Prekasno! Svi izdajnici će umreti!"
+msgstr "Prekasno! Svi izdajnici će umrijeti!"
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/21_Elvish_Assassins.cfg:429
@@ -4671,7 +4670,7 @@ msgstr ""
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/22_Northern_Battle.cfg:286
 msgid "We won!"
-msgstr "Pobedismo!"
+msgstr "Pobijedismo!"
 
 #. [scenario]: id=23_End_of_War
 #: data/campaigns/Legend_of_Wesmere/scenarios/23_End_of_War.cfg:4
@@ -4860,7 +4859,7 @@ msgstr ""
 "već i njihovu djecu. Otcijepljen od svoje vrste njihovom smrtnošću, bježeći "
 "od odraza svojih voljenih u njihovim očima, napustio je dom i mnoge godine "
 "lutao preko Velikog kontinenta. Često bi pristizao u neočekivane trenutke i "
-"mjesta gde je njegov narod bio u ozbiljnoj nevolji, izbavljajući ih "
+"mjesta gdje je njegov narod bio u ozbiljnoj nevolji, izbavljajući ih "
 "mudrošću, magijom ili svojim svijetlim ljutim sječivom."
 
 #. [part]
