--- a/po/wesnoth-manual/sr@ijekavian.po
+++ b/po/wesnoth-manual/sr@ijekavian.po
@@ -7,16 +7,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wesnoth-manual\n"
 "POT-Creation-Date: 2010-01-18 16:58+0100\n"
-"PO-Revision-Date: 2010-04-05 17:37+0200\n"
-"Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
+"PO-Revision-Date: 2010-04-28 16:24+0200\n"
+"Last-Translator: Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
 "X-Generator: Kate\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Associated-UI-Catalogs: wesnoth wesnoth-lib wesnoth-multiplayer wesnoth-tb "
 "wesnoth-httt\n"
@@ -155,10 +155,10 @@ msgid ""
 "and east lies the forest of Lintanir, where the great kingdom of the North-"
 "Elves keeps to its own mysterious affairs."
 msgstr ""
-"Сјевероземље је дивље поднебље сјеверно од Велике реке. Ову област настањују "
-"скупине оркова, патуљака, варвара и вилењака. На сјеверу и истоку простире "
-"се Линтанирска шума, у којој се велико краљевство сјеверних вилењака држи "
-"својих тајновитих пословања."
+"Сјевероземље је дивље поднебље сјеверно од Велике ријеке. Ову област "
+"настањују скупине оркова, патуљака, варвара и вилењака. На сјеверу и истоку "
+"простире се Линтанирска шума, у којој се велико краљевство сјеверних "
+"вилењака држи својих тајновитих пословања."
 
 #. type: Content of: <book><chapter><section><simpara>
 #: ../../doc/manual/manual.en.xml:57
@@ -1512,7 +1512,7 @@ msgstr ""
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: ../../doc/manual/manual.en.xml:893
 msgid "Show how far currently selected unit can move in that many turns"
-msgstr "Колико далеко изабрана јединица може да се помери за оволико потеза."
+msgstr "Колико далеко изабрана јединица може да се помјери за оволико потеза."
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: ../../doc/manual/manual.en.xml:898
@@ -2093,7 +2093,7 @@ msgid ""
 "traits."
 msgstr ""
 "Јединице имају особине које одражавају црте њиховог карактера. Особине се "
-"насумично додељују јединици при њеном стварању. Већина јединица добија две "
+"насумично додјељују јединици при њеном стварању. Већина јединица добија две "
 "особине."
 
 #. type: Content of: <book><chapter><section><section><simpara>
@@ -2505,7 +2505,7 @@ msgid ""
 "strikes."
 msgstr ""
 "Број удара при нападу се смањује како јединица бива повређивана. Број напада "
-"је сразмеран односу тренутних УП и највише УП које јединица може имати. На "
+"је сразмјеран односу тренутних УП и највише УП које јединица може имати. На "
 "примјер, јединица са 3/4 пуних УП имаће 3/4 удара при нападу."
 
 #. type: Content of: <book><chapter><section><section><title>
@@ -2613,7 +2613,7 @@ msgstr ""
 "што је то уобичајено на бојном пољу. Јединица под утицајем овог видара може "
 "повратити до 8 УП по потезу, или не осјетити дејство отрова у датом потезу. "
 "Видар не може исцијелити отровану јединицу, већ она мора потражити бригу у "
-"селу или код јединице која умије да исцељује."
+"селу или код јединице која умије да исцјељује."
 
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><term>
 #: ../../doc/manual/manual.en.xml:1655
@@ -2883,7 +2883,7 @@ msgid ""
 "by selecting that unit and choosing a new destination or clicking the unit "
 "again to cancel the <emphasis>goto</emphasis>."
 msgstr ""
-"Ако одлучите да померите изабрану јединицу, кликните на одредишно поље и "
+"Ако одлучите да помјерите изабрану јединицу, кликните на одредишно поље и "
 "јединица ће кренути ка њему. Ако кликнете на поље изван досега у текућем "
 "потезу, јединица ће се помјерити најдаље што може и ући у режим "
 "<emphasis>путовања</emphasis>. У овом режиму, јединица наставља да се креће "
@@ -2912,7 +2912,7 @@ msgstr ""
 "Већина јединица успоставља надзорни појас, који утиче на то која поља друге "
 "јединице могу досећи и којим ће се путем кретати. Ова ограничења аутоматски "
 "се одражавају на путању приказану за вашу јединицу и поља на која може да се "
-"помери у текућем потезу."
+"помјери у текућем потезу."
 
 #. type: Content of: <book><chapter><section><section><title>
 #: ../../doc/manual/manual.en.xml:1906
@@ -3313,16 +3313,16 @@ msgid ""
 "added on top of hitpoints recovered through healing so it is possible for a "
 "unit to recover up to a total of 10 hit points per turn."
 msgstr ""
-"Јединица се може залечити највише осам ударпоена по потезу. За јединицу која "
-"се нити помера нити бори током потеза каже се да се <emphasis>одмара</"
+"Јединица се може залијечити највише осам ударпоена по потезу. За јединицу "
+"која се нити помијера нити бори током потеза каже се да се <emphasis>одмара</"
 "emphasis>, чиме ће повратити два ударпоена. Ударпоени повраћени кроз "
-"одмарање додају се на оне повраћене лечењем, тако да јединица може да "
+"одмарање додају се на оне повраћене лијечењем, тако да јединица може да "
 "поврати до десет ударпоена по потезу."
 
 #. type: Content of: <book><chapter><section><simpara>
 #: ../../doc/manual/manual.en.xml:2140
 msgid "There are two basic ways for a unit to be healed:"
-msgstr "Јединица се може лечити на два основна начина:"
+msgstr "Јединица се може лијечити на два основна начина:"
 
 #. type: Content of: <book><chapter><section><itemizedlist><listitem><simpara>
 #: ../../doc/manual/manual.en.xml:2144
@@ -3337,7 +3337,7 @@ msgid ""
 "description. This is invariably <emphasis>heals +4</emphasis> or "
 "<emphasis>heals +8</emphasis>."
 msgstr ""
-"Стојећи крај јединице са способношћу <emphasis>лечења</emphasis>. Број "
+"Стојећи крај јединице са способношћу <emphasis>лијечења</emphasis>. Број "
 "ударпоена који може да излијечи дат је у опису способности те јединице, и то "
 "као <emphasis>лијечење +4</emphasis> или <emphasis>лијечење +8</emphasis>."
 
@@ -3377,12 +3377,12 @@ msgstr ""
 "Неки напади могу нанијети отровну штету вашој јединици. Када се то догоди, "
 "отрована јединица губи осам ударпоена по потезу док се не исцијели. Отров се "
 "може исцијелити чекањем у селу или стајањем крај јединице са способношћу "
-"<emphasis>исцељивања</emphasis>. Јединице са способношћу <emphasis>лечења</"
-"emphasis> могу само да спријече штету од отрова у потезу, али не и да га "
-"уклоне. У потезу у којем се исцијели, јединица не добија нити губи ударпоене "
-"усљед лијечења и тровања. Јединца се не може нормално лијечити док се не "
-"исцијели од отрова; одмарање је и даље могуће, мада неће значајно умањити "
-"дејство отрова."
+"<emphasis>исцјељивања</emphasis>. Јединице са способношћу "
+"<emphasis>лијечења</emphasis> могу само да спријече штету од отрова у "
+"потезу, али не и да га уклоне. У потезу у којем се исцијели, јединица не "
+"добија нити губи ударпоене усљед лијечења и тровања. Јединца се не може "
+"нормално лијечити док се не исцијели од отрова; одмарање је и даље могуће, "
+"мада неће значајно умањити дејство отрова."
 
 #. type: Content of: <book><chapter><section><section><simpara>
 #: ../../doc/manual/manual.en.xml:2173
@@ -4095,10 +4095,10 @@ msgid ""
 "Mage). Some other units you will encounter, such as Trolls, have the ability "
 "to heal themselves naturally."
 msgstr ""
-"Важан део постизања успеха у Боју за Веснот чини одржавање јединица здравим. "
-"Оштећену јединицу можете залечити померањем на село или надомак посебних "
+"Важан дио постизања успеха у Боју за Веснот чини одржавање јединица здравим. "
+"Оштећену јединицу можете залијечити помијерањем на село или надомак посебних "
 "видарских јединица (нпр. вилин-врачарке или белог мага). Неке јединице које "
-"ћете срести, као што су троловске, способне су да природно лече саме себе."
+"ћете срести, као што су троловске, способне су да природно лијече саме себе."
 
 #. type: Content of: <book><chapter><section><section><title>
 #: ../../doc/manual/manual.en.xml:2540
