--- a/po/wesnoth-manual/sr@ijekavianlatin.po
+++ b/po/wesnoth-manual/sr@ijekavianlatin.po
@@ -7,16 +7,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wesnoth-manual\n"
 "POT-Creation-Date: 2010-01-18 16:58+0100\n"
-"PO-Revision-Date: 2010-04-05 17:37+0200\n"
-"Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
+"PO-Revision-Date: 2010-04-28 16:24+0200\n"
+"Last-Translator: Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
 "X-Generator: Kate\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Associated-UI-Catalogs: wesnoth wesnoth-lib wesnoth-multiplayer wesnoth-tb "
 "wesnoth-httt\n"
@@ -155,7 +155,7 @@ msgid ""
 "and east lies the forest of Lintanir, where the great kingdom of the North-"
 "Elves keeps to its own mysterious affairs."
 msgstr ""
-"Sjeverozemlje je divlje podneblje sjeverno od Velike reke. Ovu oblast "
+"Sjeverozemlje je divlje podneblje sjeverno od Velike rijeke. Ovu oblast "
 "nastanjuju skupine orkova, patuljaka, varvara i vilenjaka. Na sjeveru i "
 "istoku prostire se Lintanirska šuma, u kojoj se veliko kraljevstvo sjevernih "
 "vilenjaka drži svojih tajnovitih poslovanja."
@@ -618,8 +618,8 @@ msgid ""
 "<imageobject> <imagedata fileref=\"images/multiplayer-1.5.11.jpg\"/> </"
 "imageobject>"
 msgstr ""
-"<imageobject> <imagedata fileref=\"images/sr@ijekavianlatin/multiplayer-"
-"1.7.10.jpg\"/> </imageobject>"
+"<imageobject> <imagedata fileref=\"images/sr@ijekavianlatin/"
+"multiplayer-1.7.10.jpg\"/> </imageobject>"
 
 #. type: Content of: <book><chapter><section><section><simpara><inlinemediaobject><textobject><phrase>
 #: ../../doc/manual/manual.en.xml:329
@@ -780,8 +780,8 @@ msgid ""
 "<imageobject> <imagedata fileref=\"images/game-screen-1.5.7.jpg\"/> </"
 "imageobject>"
 msgstr ""
-"<imageobject> <imagedata fileref=\"images/sr@ijekavianlatin/game-screen-"
-"1.7.10.jpg\"/> </imageobject>"
+"<imageobject> <imagedata fileref=\"images/sr@ijekavianlatin/game-"
+"screen-1.7.10.jpg\"/> </imageobject>"
 
 #. type: Content of: <book><chapter><section><section><simpara><inlinemediaobject><textobject><phrase>
 #: ../../doc/manual/manual.en.xml:394
@@ -888,8 +888,8 @@ msgid ""
 "<imageobject> <imagedata fileref=\"images/right_pane-1.5.7.jpg\"/> </"
 "imageobject>"
 msgstr ""
-"<imageobject> <imagedata fileref=\"images/sr@ijekavianlatin/right_pane-"
-"1.7.10.jpg\"/> </imageobject>"
+"<imageobject> <imagedata fileref=\"images/sr@ijekavianlatin/"
+"right_pane-1.7.10.jpg\"/> </imageobject>"
 
 #. type: Content of: <book><chapter><section><section><simpara><inlinemediaobject><textobject><phrase>
 #: ../../doc/manual/manual.en.xml:474
@@ -1516,7 +1516,7 @@ msgstr ""
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: ../../doc/manual/manual.en.xml:893
 msgid "Show how far currently selected unit can move in that many turns"
-msgstr "Koliko daleko izabrana jedinica može da se pomeri za ovoliko poteza."
+msgstr "Koliko daleko izabrana jedinica može da se pomjeri za ovoliko poteza."
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: ../../doc/manual/manual.en.xml:898
@@ -2099,7 +2099,7 @@ msgid ""
 "traits."
 msgstr ""
 "Jedinice imaju osobine koje odražavaju crte njihovog karaktera. Osobine se "
-"nasumično dodeljuju jedinici pri njenom stvaranju. Većina jedinica dobija "
+"nasumično dodjeljuju jedinici pri njenom stvaranju. Većina jedinica dobija "
 "dve osobine."
 
 #. type: Content of: <book><chapter><section><section><simpara>
@@ -2512,7 +2512,7 @@ msgid ""
 "strikes."
 msgstr ""
 "Broj udara pri napadu se smanjuje kako jedinica biva povređivana. Broj "
-"napada je srazmeran odnosu trenutnih UP i najviše UP koje jedinica može "
+"napada je srazmjeran odnosu trenutnih UP i najviše UP koje jedinica može "
 "imati. Na primjer, jedinica sa 3/4 punih UP imaće 3/4 udara pri napadu."
 
 #. type: Content of: <book><chapter><section><section><title>
@@ -2620,7 +2620,7 @@ msgstr ""
 "što je to uobičajeno na bojnom polju. Jedinica pod uticajem ovog vidara može "
 "povratiti do 8 UP po potezu, ili ne osjetiti dejstvo otrova u datom potezu. "
 "Vidar ne može iscijeliti otrovanu jedinicu, već ona mora potražiti brigu u "
-"selu ili kod jedinice koja umije da isceljuje."
+"selu ili kod jedinice koja umije da iscjeljuje."
 
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><term>
 #: ../../doc/manual/manual.en.xml:1655
@@ -2891,7 +2891,7 @@ msgid ""
 "by selecting that unit and choosing a new destination or clicking the unit "
 "again to cancel the <emphasis>goto</emphasis>."
 msgstr ""
-"Ako odlučite da pomerite izabranu jedinicu, kliknite na odredišno polje i "
+"Ako odlučite da pomjerite izabranu jedinicu, kliknite na odredišno polje i "
 "jedinica će krenuti ka njemu. Ako kliknete na polje izvan dosega u tekućem "
 "potezu, jedinica će se pomjeriti najdalje što može i ući u režim "
 "<emphasis>putovanja</emphasis>. U ovom režimu, jedinica nastavlja da se "
@@ -2920,7 +2920,7 @@ msgstr ""
 "Većina jedinica uspostavlja nadzorni pojas, koji utiče na to koja polja "
 "druge jedinice mogu doseći i kojim će se putem kretati. Ova ograničenja "
 "automatski se odražavaju na putanju prikazanu za vašu jedinicu i polja na "
-"koja može da se pomeri u tekućem potezu."
+"koja može da se pomjeri u tekućem potezu."
 
 #. type: Content of: <book><chapter><section><section><title>
 #: ../../doc/manual/manual.en.xml:1906
@@ -3321,16 +3321,16 @@ msgid ""
 "added on top of hitpoints recovered through healing so it is possible for a "
 "unit to recover up to a total of 10 hit points per turn."
 msgstr ""
-"Jedinica se može zalečiti najviše osam udarpoena po potezu. Za jedinicu koja "
-"se niti pomera niti bori tokom poteza kaže se da se <emphasis>odmara</"
+"Jedinica se može zaliječiti najviše osam udarpoena po potezu. Za jedinicu "
+"koja se niti pomijera niti bori tokom poteza kaže se da se <emphasis>odmara</"
 "emphasis>, čime će povratiti dva udarpoena. Udarpoeni povraćeni kroz "
-"odmaranje dodaju se na one povraćene lečenjem, tako da jedinica može da "
+"odmaranje dodaju se na one povraćene liječenjem, tako da jedinica može da "
 "povrati do deset udarpoena po potezu."
 
 #. type: Content of: <book><chapter><section><simpara>
 #: ../../doc/manual/manual.en.xml:2140
 msgid "There are two basic ways for a unit to be healed:"
-msgstr "Jedinica se može lečiti na dva osnovna načina:"
+msgstr "Jedinica se može liječiti na dva osnovna načina:"
 
 #. type: Content of: <book><chapter><section><itemizedlist><listitem><simpara>
 #: ../../doc/manual/manual.en.xml:2144
@@ -3345,7 +3345,7 @@ msgid ""
 "description. This is invariably <emphasis>heals +4</emphasis> or "
 "<emphasis>heals +8</emphasis>."
 msgstr ""
-"Stojeći kraj jedinice sa sposobnošću <emphasis>lečenja</emphasis>. Broj "
+"Stojeći kraj jedinice sa sposobnošću <emphasis>liječenja</emphasis>. Broj "
 "udarpoena koji može da izliječi dat je u opisu sposobnosti te jedinice, i to "
 "kao <emphasis>liječenje +4</emphasis> ili <emphasis>liječenje +8</emphasis>."
 
@@ -3385,12 +3385,12 @@ msgstr ""
 "Neki napadi mogu nanijeti otrovnu štetu vašoj jedinici. Kada se to dogodi, "
 "otrovana jedinica gubi osam udarpoena po potezu dok se ne iscijeli. Otrov se "
 "može iscijeliti čekanjem u selu ili stajanjem kraj jedinice sa sposobnošću "
-"<emphasis>isceljivanja</emphasis>. Jedinice sa sposobnošću "
-"<emphasis>lečenja</emphasis> mogu samo da spriječe štetu od otrova u potezu, "
-"ali ne i da ga uklone. U potezu u kojem se iscijeli, jedinica ne dobija niti "
-"gubi udarpoene usljed liječenja i trovanja. Jedinca se ne može normalno "
-"liječiti dok se ne iscijeli od otrova; odmaranje je i dalje moguće, mada "
-"neće značajno umanjiti dejstvo otrova."
+"<emphasis>iscjeljivanja</emphasis>. Jedinice sa sposobnošću "
+"<emphasis>liječenja</emphasis> mogu samo da spriječe štetu od otrova u "
+"potezu, ali ne i da ga uklone. U potezu u kojem se iscijeli, jedinica ne "
+"dobija niti gubi udarpoene usljed liječenja i trovanja. Jedinca se ne može "
+"normalno liječiti dok se ne iscijeli od otrova; odmaranje je i dalje moguće, "
+"mada neće značajno umanjiti dejstvo otrova."
 
 #. type: Content of: <book><chapter><section><section><simpara>
 #: ../../doc/manual/manual.en.xml:2173
@@ -4107,11 +4107,11 @@ msgid ""
 "Mage). Some other units you will encounter, such as Trolls, have the ability "
 "to heal themselves naturally."
 msgstr ""
-"Važan deo postizanja uspeha u Boju za Vesnot čini održavanje jedinica "
-"zdravim. Oštećenu jedinicu možete zalečiti pomeranjem na selo ili nadomak "
-"posebnih vidarskih jedinica (npr. vilin-vračarke ili belog maga). Neke "
-"jedinice koje ćete sresti, kao što su trolovske, sposobne su da prirodno "
-"leče same sebe."
+"Važan dio postizanja uspeha u Boju za Vesnot čini održavanje jedinica "
+"zdravim. Oštećenu jedinicu možete zaliječiti pomijeranjem na selo ili "
+"nadomak posebnih vidarskih jedinica (npr. vilin-vračarke ili belog maga). "
+"Neke jedinice koje ćete sresti, kao što su trolovske, sposobne su da "
+"prirodno liječe same sebe."
 
 #. type: Content of: <book><chapter><section><section><title>
 #: ../../doc/manual/manual.en.xml:2540
