--- a/po/wesnoth-trow/sr@ijekavianlatin.po
+++ b/po/wesnoth-trow/sr@ijekavianlatin.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-trow\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-10 12:33+0200\n"
-"PO-Revision-Date: 2010-04-05 17:47+0200\n"
-"Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
+"PO-Revision-Date: 2010-04-28 16:24+0200\n"
+"Last-Translator: Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -304,7 +304,7 @@ msgstr ""
 msgid ""
 "We must inquire of the survivors after we defeat them. Onward to victory!"
 msgstr ""
-"Moramo o tome ispitati zarobljenike pošto ih porazimo. Naprijed u pobedu!"
+"Moramo o tome ispitati zarobljenike pošto ih porazimo. Naprijed u pobjedu!"
 
 #. [message]: speaker=Wesfolk Leader
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/01_A_Summer_of_Storms.cfg:133
@@ -1181,7 +1181,7 @@ msgid ""
 "Soldier, have you deserted your post?"
 msgstr ""
 "Ja sam Haldrik; moj otac biješe kralj Eldarik Četvrti u zemljama "
-"sjeverozapadno odavde. Vojniče, jesi li ti to napustio svoje redove?"
+"sjeverozapadno odavdje. Vojniče, jesi li ti to napustio svoje redove?"
 
 #. [message]: speaker=Sir Ruddry
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/04a_The_River_Road.cfg:450
@@ -1279,7 +1279,7 @@ msgid ""
 "air."
 msgstr ""
 "Princ Haldrik povede svoju izbjegličku skupinu u Sredopolje, gdje se u "
-"vazduhu osećaše dim."
+"vazduhu osjećaše dim."
 
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/04b_The_Midlands.cfg:167
@@ -1778,7 +1778,7 @@ msgid ""
 "scout the road ahead. We need to know if we can make it to Southbay. I'll "
 "return in a few days."
 msgstr ""
-"Odložimo ovu raspru za kasnije. I dalje vam mogu biti od koristi. Izvideću "
+"Odložimo ovu raspru za kasnije. I dalje vam mogu biti od koristi. Izvidjeću "
 "put pred nama. Moramo znati da li se Jugozaliv može doseći. Vratiću se za "
 "nekoliko dana."
 
@@ -2238,8 +2238,8 @@ msgid ""
 "Always happy to help a tree-friend. May the Powers of Light guide you on "
 "your way!"
 msgstr ""
-"Uvek se radujem da ugostim drveću-prijatelja. Neka Sile svetlosti obasjavaju "
-"drum pred tobom!"
+"Uvijek se radujem da ugostim drveću-prijatelja. Neka Sile svjetlosti "
+"obasjavaju drum pred tobom!"
 
 #. [message]: speaker=Burin the Lost
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/07_Return_to_Oldwood.cfg:307
@@ -2619,7 +2619,7 @@ msgid ""
 "We've escaped from the orcs before we were trapped by the ice! Now, on to "
 "Southbay."
 msgstr ""
-"Uspeli smo da umaknemo orkovima prije nego što bi nas led zarobio! Sada, ka "
+"Uspjeli smo da umaknemo orkovima prije nego što bi nas led zarobio! Sada, ka "
 "Jugozalivu."
 
 #. [message]: speaker=Burin the Lost
@@ -2917,7 +2917,7 @@ msgstr "Pre kao SZ — svaki ork na Ostrvu. Hmf!"
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/09_Fallen_Lich_Point.cfg:509
 msgid "We have the book, let's get out of here!"
-msgstr "Knjiga je naša, bježimo odavde!"
+msgstr "Knjiga je naša, bježimo odavdje!"
 
 #. [message]: speaker=Lady Jessene
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/09_Fallen_Lich_Point.cfg:514
@@ -3372,7 +3372,7 @@ msgid ""
 "under the ice. You might even be able to depart in well provisioned ships!"
 msgstr ""
 "Hmm. Ima mudrosti u tvom zborenju, ali meni kraj treba da dođe na ovom "
-"mestu. Možemo izdržati do kraja zime. Kada orkovi posljednji put naiđoše, "
+"mjestu. Možemo izdržati do kraja zime. Kada orkovi posljednji put naiđoše, "
 "bila je jesen i ljetina je već bila prikupljena. Možemo ribariti velika jata "
 "koja obitavaju pod ledom. Možda ćete čak moći da se otisnete sa dobro "
 "snabdjevenim brodovima!"
@@ -3998,7 +3998,7 @@ msgid ""
 "group of small windswept islands to regroup."
 msgstr ""
 "Posle osobito burnog niza oluja, „Eldarik“ se biješe napunio vodom, a veći "
-"deo flote razasuo naokolo. Gospodar Tifon predlaže da se pristane na skupinu "
+"dio flote razasuo naokolo. Gospodar Tifon predlaže da se pristane na skupinu "
 "malih brisanih ostrva, radi predaha i okupljanja."
 
 #. [message]: speaker=Burin the Lost
@@ -4014,7 +4014,7 @@ msgid ""
 "like to scavenge metal from ships that they capture here."
 msgstr ""
 "Nastupajte oprezno, ova ostrva nisu bezbjedna. Na teritoriji smo nagajaca. "
-"Ali je ovo jedino mesto gdje možemo zastati, sa dovoljno mekim pješčanim "
+"Ali je ovo jedino mjesto gdje možemo zastati, sa dovoljno mekim pješčanim "
 "plažama da nas prihvate... Nagajci vole da sakupljaju metal sa brodova koje "
 "ovdje zarobe."
 
@@ -4479,7 +4479,7 @@ msgid ""
 "the thought of those dwarves stumbling on the trolls vaguely amusing, this "
 "should make an adequate quest for you."
 msgstr ""
-"Imamo neprijatnosti usled trolovske jazbine u Smeđim brdima. Iako mi je "
+"Imamo neprijatnosti usljed trolovske jazbine u Smeđim brdima. Iako mi je "
 "ponešto zabavna pomisao na patuljke koji nesmotreno nalijeću na trolove, ovo "
 "bi mogao biti odgovarajući zadatak za tebe."
 
@@ -4491,7 +4491,7 @@ msgid ""
 "should clear this isle, and put their souls to rest."
 msgstr ""
 "Pre puno vremena, klan vilenjaka na Ostrvu suza zapade pod uticaj mračne "
-"kletve. Njihove duše još uvijek pohode to mesto, i nijedan mu se vilenjak "
+"kletve. Njihove duše još uvijek pohode to mjesto, i nijedan mu se vilenjak "
 "neće približiti. Idi i pročisti to ostrvo, pošalji njihove duše na počinak."
 
 #. [message]: speaker=Lord Logalmier
@@ -4666,7 +4666,7 @@ msgstr "Tako, mladi moj prinče, nisi tako mek kao što mišljah."
 #. [message]: speaker=Lady Dionli
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/16_Elf_Lords.cfg:483
 msgid "You were successful, Prince Haldric. I knew you could do it."
-msgstr "Uspio si, prinče Haldriče. Znala sam da ćete uspeti."
+msgstr "Uspio si, prinče Haldriče. Znala sam da ćete uspjeti."
 
 #. [message]: speaker=Lord Logalmier
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/16_Elf_Lords.cfg:488
@@ -4695,7 +4695,7 @@ msgid ""
 msgstr ""
 "Ovim vam predajemo ravnice sjeverno od Velike reke, i ravnice i brda južno "
 "od nje. Budite pažljivi sa zemljom. U burna vremena možemo se pozvati na "
-"vas, sećajte se naše darežljivosti."
+"vas, sjećajte se naše darežljivosti."
 
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/16_Elf_Lords.cfg:508
@@ -5522,7 +5522,7 @@ msgstr "Moramo zapriječiti prolazak ljudima!"
 #. [message]: speaker=Tan-Erirt
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/19_The_Vanguard.cfg:450
 msgid "Reserves! We can't let them get to their landing site."
-msgstr "Pojačanja! Ne smijemo im dopustiti da se dokopaju mesta iskrcavanja."
+msgstr "Pojačanja! Ne smijemo im dopustiti da se dokopaju mjesta iskrcavanja."
 
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/19_The_Vanguard.cfg:464
@@ -5582,8 +5582,8 @@ msgid ""
 "Haldric reaches the site where the fleet is due to return. Several ships "
 "have already docked. The orcs are on the frontier."
 msgstr ""
-"Haldrik stiže na mesto gdje je floti određeno da se pojavi. Nekoliko brodova "
-"je već pristalo. Orkovi su nadomak granice."
+"Haldrik stiže na mjesto gdje je floti određeno da se pojavi. Nekoliko "
+"brodova je već pristalo. Orkovi su nadomak granice."
 
 #. [message]: speaker=Commander Aethyr
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/20_Return_of_the_Fleet.cfg:225
@@ -5795,7 +5795,7 @@ msgid ""
 "secure our place in this new land. Then if the orcs return, hopefully "
 "they'll go looking for our not-so-loyal elven allies first."
 msgstr ""
-"Ubedićemo Dževijana da smo Vatreni rubin podarili vilenjacima, kako bismo "
+"Ubijedićemo Dževijana da smo Vatreni rubin podarili vilenjacima, kako bismo "
 "obezbijedili sebi mjesto u ovoj novoj zemlji. Tada, ako se orkovi navrate, "
 "daće se u potragu za našim ne baš odanim saveznicima vilenjacima."
 
@@ -5980,7 +5980,7 @@ msgid ""
 msgstr ""
 "Počast će mi biti ta što ćete uništiti Dževijana! Ako je moguće, prije nego "
 "što bude imao priliku da sa mnom učini nešto neprirodno. Želim da počivam u "
-"miru, a ne da budem beslovjesni rob za celu viječnost!"
+"miru, a ne da budem beslovjesni rob za cijelu viječnost!"
 
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/21_The_Plan.cfg:229
@@ -6514,8 +6514,8 @@ msgid ""
 msgstr ""
 "Bez zapovjednikove plemenite žrtve, nikada ne bismo prevagnuli. Danas smo "
 "izborili veliku pobjedu, ali je mnogo toga izgubljeno. Padoše moj otac "
-"Eldarik i kralj Adroran, a sa njima i celo mnoštvo valjanih ljudi. Pa ipak, "
-"ima nade, cijela nova zemlja se prostire pred nama!"
+"Eldarik i kralj Adroran, a sa njima i cijelo mnoštvo valjanih ljudi. Pa "
+"ipak, ima nade, cijela nova zemlja se prostire pred nama!"
 
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/23_Epilogue.cfg:163
@@ -6982,7 +6982,7 @@ msgid ""
 "which she can lend to her people for turning a fight in their favour."
 msgstr ""
 "Rođena među vesnoćanskom aristokratijom, nju i njen narod izgnaše iz društva "
-"njihovi gospodari, koji izdadoše njihovu odanost kako se videlo da će rat "
+"njihovi gospodari, koji izdadoše njihovu odanost kako se vidjelo da će rat "
 "protiv Haldrika biti izgubljen. Iako odmetnica, plemićka krv joj još uvijek "
 "teče venama, dok je na bojnom polju stekla vrijedno iskustvo, kojim umije "
 "nadahnuti svoj narod u borbi i preokrenuti je u njihovu korist."
@@ -7214,7 +7214,7 @@ msgid ""
 "In confronting their vile legions, we grew strong. Indeed, it was from this "
 "war we gleaned our first shards of knowledge about magic."
 msgstr ""
-"Posle perioda velike borbe, sklopljen je mir. Nama je pripao veći deo "
+"Poslije perioda velike borbe, sklopljen je mir. Nama je pripao veći dio "
 "Ostrva, dok su Vesnoćani bili potisnuti u najzabačenije krajeve. Iz sukoba "
 "sa njihovim zlokobnim legijama, izašli smo još jači. Uistinu, iz toga rata "
 "smo spoznali prve mrvice magijskog znanja."
