--- a/po/wesnoth-units/sr@ijekavian.po
+++ b/po/wesnoth-units/sr@ijekavian.po
@@ -10,15 +10,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-units\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-10 12:33+0200\n"
-"PO-Revision-Date: 2010-04-05 17:47+0200\n"
-"Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
+"PO-Revision-Date: 2010-04-28 16:25+0200\n"
+"Last-Translator: Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -37,7 +37,7 @@ msgid ""
 msgstr ""
 "Крво-шишмиши тако су названи усљед своје румене појаве, што неким изгледа "
 "као обиљежје њихове омиљене исхране. Ова су створења брза, и могу црпсти крв "
-"оних које нападну, тако уливајући себи нешто од нарушеног здравља услед "
+"оних које нападну, тако уливајући себи нешто од нарушеног здравља усљед "
 "дејства противника."
 
 #. [attack]: type=blade
@@ -489,7 +489,7 @@ msgstr ""
 "\n"
 "Једрени се најчешће окомљују на већу ловину, попут јелена, свиња или "
 "делфина; змашка урођена способност да усмјеравају пламен, ометена у других "
-"каста због њихових оклопа, овде је незамјенљива за разоткривање и "
+"каста због њихових оклопа, овдје је незамјенљива за разоткривање и "
 "сатјеривање плијена без повређивања. Када се једрен нађе на бојишту, радије "
 "кидише на непријатеља из даљине; када то више није могуће, бориће се ногама, "
 "држећи драгоцјена крила што даље од непријатеља."
@@ -672,7 +672,7 @@ msgid ""
 "mightiest of warriors with a single blow."
 msgstr ""
 "Није познато зашто се змајогарди називају тако, именом које су им надјенула "
-"њихова патуљачка браћа. Неки нагађају да оно следи из њиховог вољеног "
+"њихова патуљачка браћа. Неки нагађају да оно слиједи из њиховог вољеног "
 "оружја, тих чудноватих штапова који бљују ватру и смрт. Други претпостављају "
 "да је то зато што таква оружја могу бити пријетња и правом змају, види ли се "
 "опет такво створење у познатом свијету. Шта год било у питању, због тог "
@@ -1640,7 +1640,7 @@ msgstr ""
 "се лудак могао својевољно сусрести са једним; али гоблини, уз велики данак, "
 "успјели су да их укроте и упрегну.\n"
 "\n"
-"Канџе вука се обично не сматрају његовим опаснијим посједом, али код звери "
+"Канџе вука се обично не сматрају његовим опаснијим посједом, али код звјери "
 "овако велике, дебље су и дуже од гвоздених чавла. На предњи пар, њихови "
 "јахачи им мажу отров, не много различит од оног који користе орковске убице, "
 "чинећи замах шапе ових звјери изузетно смртоносним потезом."
@@ -1680,8 +1680,8 @@ msgid ""
 "dangerous in combat."
 msgstr ""
 "Гоблински „витезови“ имају мало заједничког са људима који дијеле исто "
-"звање, већ се оно најпре користи у жаргону њихових непријатеља. Сличност "
-"долази једино отуда што чине елиту вукоседлаша, највјероватније унапређени "
+"звање, већ се оно најприје користи у жаргону њихових непријатеља. Сличност "
+"долази једино отуда што чине елиту вукоседлаша, највјероватније унапријеђени "
 "на тај положај поводом успјеха у каквом смјелом походу.\n"
 "\n"
 "Вуци који им се дају одгајају се за брзину и снагу, чинећи их врло опасним у "
@@ -2819,7 +2819,7 @@ msgstr ""
 "Неки магови, како спознају свијет око себе и увиђају истину о патњи и биједи "
 "у којој човечанство пречесто битише, налазе да се не могу оградити животом "
 "изучавања. Ови мушкарци и жене одбацују живот магова и прикључују се "
-"монашким редовима, посвећујући стекнуте вјештине добробити свију. После "
+"монашким редовима, посвећујући стекнуте вјештине добробити свију. Послије "
 "иницијације, они често лутају свијетом, на путу збрињавајући болесне и "
 "рањене.\n"
 "\n"
@@ -3031,7 +3031,7 @@ msgid ""
 "attacking on lonely roads or in the dead of night. Their experience with "
 "such encounters makes them deadly foes in hand to hand combat."
 msgstr ""
-"Друмаши су изашли на рђав глас по потајним делима пуним насиља. Спремни да "
+"Друмаши су изашли на рђав глас по потајним дјелима пуним насиља. Спремни да "
 "се унајме коме год да плати највише, воде дружине мањих одметника против "
 "непријатеља̂ свога послодавца, често ударајући на осамљеним друмовима под "
 "окриљем ноћи. Искуство из таквих окршаја чини их смртоносним противницима у "
@@ -3215,7 +3215,7 @@ msgstr ""
 "ловине, и која обученим стојећим стрелцима често недостаје.\n"
 "\n"
 "Прекаљене ловце у службу узимају све дружине што живе или се крећу дивљим "
-"пределима, било да су људи од закона или супротстављени му. Природа сама "
+"предјелима, било да су људи од закона или супротстављени му. Природа сама "
 "умије изњедрити погибељна изненађења, те заповједник који не унајми оваквог "
 "водича ризикује губитак људства ни до чега другог до опасног терена. Спретни "
 "људи од шуме спасавају животе, олакшавају путовање, набављају храну, а "
@@ -3830,7 +3830,7 @@ msgstr ""
 "Зналци имају различита мишљења о поријеклу водених змијара. Неки држе да су "
 "то незрели млади, или дозрели сродници, морских змијара. Други их, пак, "
 "сматрају примитивном граном нагајаца. Оно што је сигурно јесте да је мудро "
-"избјегавати воде за које се зна да су им места окупљања."
+"избјегавати воде за које се зна да су им мјеста окупљања."
 
 #. [unit_type]: id=Wolf, race=wolf
 #: data/core/units/monsters/Wolf.cfg:4
@@ -3944,7 +3944,7 @@ msgid ""
 "greatly impedes the technique."
 msgstr ""
 "Многи млади нагајски ратници теже да једнога дана завриједе добијања другог "
-"сечива. Њихова борилачка вјештина употребе двосјеклог оружја нимало није "
+"сјечива. Њихова борилачка вјештина употребе двосјеклог оружја нимало није "
 "налик оној коју користе оркови и друге расе, јер су је ковали са наумом да "
 "што боље искористе своје змијско обличје, уврћући се и окрећући како би "
 "изврдали ударцима. Ово их чини опасним на копну, али водено окружење доста "
@@ -4122,7 +4122,7 @@ msgid ""
 "their rare ability to rally other orcs to battle, to give orders that are "
 "followed not out of fear, but loyalty."
 msgstr ""
-"Било који орк који умије спријечити унутрашње размирице и поделе у великом "
+"Било који орк који умије спријечити унутрашње размирице и подјеле у великом "
 "племену, мора бити необично оштроуман и заповједништву вичан, а неизбјежно и "
 "врло снажан. Умјешан је и са мачем и са луком, али прави дар владара јесте "
 "његова ријетка способност да држи на окупу друге орке у боју, издајући "
@@ -4216,8 +4216,8 @@ msgid ""
 "these beast-warriors lead their brethren with iron will and iron hand."
 msgstr ""
 "Само оркови знатне лукавости и непревазиђене снаге могу постати ратовођи. "
-"Господари мачева, донекле познавши и стрељачке вјештине, ови зверски ратници "
-"воде свој род гвозденом вољом и гвозденом песницом."
+"Господари мачева, донекле познавши и стрељачке вјештине, ови звјерски "
+"ратници воде свој род гвозденом вољом и гвозденом песницом."
 
 #. [unit_type]: id=Orcish Warrior, race=orc
 #: data/core/units/orcs/Warrior.cfg:4
@@ -4924,7 +4924,7 @@ msgid ""
 msgstr ""
 "Мало је остало у овим надвисујућим руинама од људи који су некада били. "
 "Ратници у срцу, сада су изгубљени у сновима неживота. Лутајући кроз највеће "
-"битке из својих сећања, очајнички се боре за отпуст, за мир који се купује "
+"битке из својих сјећања, очајнички се боре за отпуст, за мир који се купује "
 "само снагом оружја. Такви су им напори: без размишљања, без предаха."
 
 #. [unit_type]: id=Revenant, race=undead
