--- a/po/wesnoth-units/sr@ijekavianlatin.po
+++ b/po/wesnoth-units/sr@ijekavianlatin.po
@@ -10,15 +10,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-units\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-10 12:33+0200\n"
-"PO-Revision-Date: 2010-04-05 17:47+0200\n"
-"Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
+"PO-Revision-Date: 2010-04-28 16:25+0200\n"
+"Last-Translator: Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -37,8 +37,8 @@ msgid ""
 msgstr ""
 "Krvo-šišmiši tako su nazvani usljed svoje rumene pojave, što nekim izgleda "
 "kao obilježje njihove omiljene ishrane. Ova su stvorenja brza, i mogu crpsti "
-"krv onih koje napadnu, tako ulivajući sebi nešto od narušenog zdravlja usled "
-"dejstva protivnika."
+"krv onih koje napadnu, tako ulivajući sebi nešto od narušenog zdravlja "
+"usljed dejstva protivnika."
 
 #. [attack]: type=blade
 #. [attack]: type=pierce
@@ -492,7 +492,7 @@ msgstr ""
 "\n"
 "Jedreni se najčešće okomljuju na veću lovinu, poput jelena, svinja ili "
 "delfina; zmaška urođena sposobnost da usmjeravaju plamen, ometena u drugih "
-"kasta zbog njihovih oklopa, ovde je nezamjenljiva za razotkrivanje i "
+"kasta zbog njihovih oklopa, ovdje je nezamjenljiva za razotkrivanje i "
 "satjerivanje plijena bez povređivanja. Kada se jedren nađe na bojištu, "
 "radije kidiše na neprijatelja iz daljine; kada to više nije moguće, boriće "
 "se nogama, držeći dragocjena krila što dalje od neprijatelja."
@@ -676,7 +676,7 @@ msgid ""
 "mightiest of warriors with a single blow."
 msgstr ""
 "Nije poznato zašto se zmajogardi nazivaju tako, imenom koje su im nadjenula "
-"njihova patuljačka braća. Neki nagađaju da ono sledi iz njihovog voljenog "
+"njihova patuljačka braća. Neki nagađaju da ono slijedi iz njihovog voljenog "
 "oružja, tih čudnovatih štapova koji bljuju vatru i smrt. Drugi "
 "pretpostavljaju da je to zato što takva oružja mogu biti prijetnja i pravom "
 "zmaju, vidi li se opet takvo stvorenje u poznatom svijetu. Šta god bilo u "
@@ -1646,10 +1646,10 @@ msgstr ""
 "bi se ludak mogao svojevoljno susresti sa jednim; ali goblini, uz veliki "
 "danak, uspjeli su da ih ukrote i upregnu.\n"
 "\n"
-"Kandže vuka se obično ne smatraju njegovim opasnijim posjedom, ali kod zveri "
-"ovako velike, deblje su i duže od gvozdenih čavla. Na prednji par, njihovi "
-"jahači im mažu otrov, ne mnogo različit od onog koji koriste orkovske ubice, "
-"čineći zamah šape ovih zvjeri izuzetno smrtonosnim potezom."
+"Kandže vuka se obično ne smatraju njegovim opasnijim posjedom, ali kod "
+"zvjeri ovako velike, deblje su i duže od gvozdenih čavla. Na prednji par, "
+"njihovi jahači im mažu otrov, ne mnogo različit od onog koji koriste "
+"orkovske ubice, čineći zamah šape ovih zvjeri izuzetno smrtonosnim potezom."
 
 #. [unit_type]: id=Goblin Impaler, race=goblin
 #: data/core/units/goblins/Impaler.cfg:4
@@ -1686,9 +1686,9 @@ msgid ""
 "dangerous in combat."
 msgstr ""
 "Goblinski „vitezovi“ imaju malo zajedničkog sa ljudima koji dijele isto "
-"zvanje, već se ono najpre koristi u žargonu njihovih neprijatelja. Sličnost "
-"dolazi jedino otuda što čine elitu vukosedlaša, najvjerovatnije unapređeni "
-"na taj položaj povodom uspjeha u kakvom smjelom pohodu.\n"
+"zvanje, već se ono najprije koristi u žargonu njihovih neprijatelja. "
+"Sličnost dolazi jedino otuda što čine elitu vukosedlaša, najvjerovatnije "
+"unaprijeđeni na taj položaj povodom uspjeha u kakvom smjelom pohodu.\n"
 "\n"
 "Vuci koji im se daju odgajaju se za brzinu i snagu, čineći ih vrlo opasnim u "
 "borbi."
@@ -2831,7 +2831,7 @@ msgstr ""
 "Neki magovi, kako spoznaju svijet oko sebe i uviđaju istinu o patnji i "
 "bijedi u kojoj čovečanstvo prečesto bitiše, nalaze da se ne mogu ograditi "
 "životom izučavanja. Ovi muškarci i žene odbacuju život magova i priključuju "
-"se monaškim redovima, posvećujući steknute vještine dobrobiti sviju. Posle "
+"se monaškim redovima, posvećujući steknute vještine dobrobiti sviju. Poslije "
 "inicijacije, oni često lutaju svijetom, na putu zbrinjavajući bolesne i "
 "ranjene.\n"
 "\n"
@@ -3044,7 +3044,7 @@ msgid ""
 "attacking on lonely roads or in the dead of night. Their experience with "
 "such encounters makes them deadly foes in hand to hand combat."
 msgstr ""
-"Drumaši su izašli na rđav glas po potajnim delima punim nasilja. Spremni da "
+"Drumaši su izašli na rđav glas po potajnim djelima punim nasilja. Spremni da "
 "se unajme kome god da plati najviše, vode družine manjih odmetnika protiv "
 "neprijateljâ̂ svoga poslodavca, često udarajući na osamljenim drumovima pod "
 "okriljem noći. Iskustvo iz takvih okršaja čini ih smrtonosnim protivnicima u "
@@ -3228,7 +3228,7 @@ msgstr ""
 "lovine, i koja obučenim stojećim strelcima često nedostaje.\n"
 "\n"
 "Prekaljene lovce u službu uzimaju sve družine što žive ili se kreću divljim "
-"predelima, bilo da su ljudi od zakona ili suprotstavljeni mu. Priroda sama "
+"predjelima, bilo da su ljudi od zakona ili suprotstavljeni mu. Priroda sama "
 "umije iznjedriti pogibeljna iznenađenja, te zapovjednik koji ne unajmi "
 "ovakvog vodiča rizikuje gubitak ljudstva ni do čega drugog do opasnog "
 "terena. Spretni ljudi od šume spasavaju živote, olakšavaju putovanje, "
@@ -3847,7 +3847,7 @@ msgstr ""
 "Znalci imaju različita mišljenja o porijeklu vodenih zmijara. Neki drže da "
 "su to nezreli mladi, ili dozreli srodnici, morskih zmijara. Drugi ih, pak, "
 "smatraju primitivnom granom nagajaca. Ono što je sigurno jeste da je mudro "
-"izbjegavati vode za koje se zna da su im mesta okupljanja."
+"izbjegavati vode za koje se zna da su im mjesta okupljanja."
 
 #. [unit_type]: id=Wolf, race=wolf
 #: data/core/units/monsters/Wolf.cfg:4
@@ -3961,7 +3961,7 @@ msgid ""
 "greatly impedes the technique."
 msgstr ""
 "Mnogi mladi nagajski ratnici teže da jednoga dana zavrijede dobijanja drugog "
-"sečiva. Njihova borilačka vještina upotrebe dvosjeklog oružja nimalo nije "
+"sječiva. Njihova borilačka vještina upotrebe dvosjeklog oružja nimalo nije "
 "nalik onoj koju koriste orkovi i druge rase, jer su je kovali sa naumom da "
 "što bolje iskoriste svoje zmijsko obličje, uvrćući se i okrećući kako bi "
 "izvrdali udarcima. Ovo ih čini opasnim na kopnu, ali vodeno okruženje dosta "
@@ -4139,7 +4139,7 @@ msgid ""
 "their rare ability to rally other orcs to battle, to give orders that are "
 "followed not out of fear, but loyalty."
 msgstr ""
-"Bilo koji ork koji umije spriječiti unutrašnje razmirice i podele u velikom "
+"Bilo koji ork koji umije spriječiti unutrašnje razmirice i podjele u velikom "
 "plemenu, mora biti neobično oštrouman i zapovjedništvu vičan, a neizbježno i "
 "vrlo snažan. Umješan je i sa mačem i sa lukom, ali pravi dar vladara jeste "
 "njegova rijetka sposobnost da drži na okupu druge orke u boju, izdajući "
@@ -4233,7 +4233,7 @@ msgid ""
 "these beast-warriors lead their brethren with iron will and iron hand."
 msgstr ""
 "Samo orkovi znatne lukavosti i neprevaziđene snage mogu postati ratovođi. "
-"Gospodari mačeva, donekle poznavši i streljačke vještine, ovi zverski "
+"Gospodari mačeva, donekle poznavši i streljačke vještine, ovi zvjerski "
 "ratnici vode svoj rod gvozdenom voljom i gvozdenom pesnicom."
 
 #. [unit_type]: id=Orcish Warrior, race=orc
@@ -4943,7 +4943,7 @@ msgid ""
 msgstr ""
 "Malo je ostalo u ovim nadvisujućim ruinama od ljudi koji su nekada bili. "
 "Ratnici u srcu, sada su izgubljeni u snovima neživota. Lutajući kroz najveće "
-"bitke iz svojih sećanja, očajnički se bore za otpust, za mir koji se kupuje "
+"bitke iz svojih sjećanja, očajnički se bore za otpust, za mir koji se kupuje "
 "samo snagom oružja. Takvi su im napori: bez razmišljanja, bez predaha."
 
 #. [unit_type]: id=Revenant, race=undead
