--- a/po/wesnoth-utbs/sr@latin.po
+++ b/po/wesnoth-utbs/sr@latin.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-utbs\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-23 23:46+0200\n"
-"PO-Revision-Date: 2010-04-05 17:47+0200\n"
-"Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
+"PO-Revision-Date: 2010-04-28 13:51+0200\n"
+"Last-Translator: Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 "X-Generator: Kate\n"
@@ -1470,7 +1470,7 @@ msgstr "Go-hag"
 #: data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg:1442
 #: data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg:1443
 msgid "Undead Raider"
-msgstr "nemrtvi jahač"
+msgstr "nemrtvi pljačkaš"
 
 #. [message]: speaker=Elyssa
 #: data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg:1458
@@ -7960,7 +7960,7 @@ msgid ""
 "Kaleh, we don't have time for questions. The water is still rising and we "
 "must get our people to safety."
 msgstr ""
-"Kaleh, nemamo vremena za ispitivanje. Voda i dalje raste, moramo izvesti "
+"Kaleše, nemamo vremena za ispitivanje. Voda i dalje raste, moramo izvesti "
 "narod na bezbedno."
 
 #. [message]: speaker=Kaleh
