--- a/po/wesnoth-ei/sr@ijekavian.po
+++ b/po/wesnoth-ei/sr@ijekavian.po
@@ -9,16 +9,16 @@ msgstr ""
 "Project-Id-Version: wesnoth-ei\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-24 10:36+0200\n"
-"PO-Revision-Date: 2010-04-05 17:36+0200\n"
-"Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
+"PO-Revision-Date: 2010-04-28 14:01+0200\n"
+"Last-Translator: Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -112,7 +112,7 @@ msgid ""
 "It was the thirteenth year of Konrad II's reign, and there were strange "
 "occurrences in the Estmark Hills on the eastern border of Wesnoth."
 msgstr ""
-"Бијеше тринаеста година у владавину Конрада Другог, кад почеше да се збивају "
+"Бјеше тринаеста година у владавину Конрада Другог, кад почеше да се збивају "
 "чудни догађаји у Естмаршким брдима, на источној граници Веснота."
 
 #. [part]
@@ -150,7 +150,7 @@ msgid ""
 "to combat these intrusions."
 msgstr ""
 "Пошто је краљ примио вест о проблему, његов савјетник Десин имаше пуно тога "
-"да каже. Очито, ови напади бијеху у вези са сличнима који се раније догађаше "
+"да каже. Очито, ови напади бјеху у вези са сличнима који се раније догађаше "
 "на далекој јужној граници, нападима немртвих. Десин изложи план борбе против "
 "ових упада."
 
@@ -166,7 +166,7 @@ msgstr ""
 "У данима краља Гарарда I, два упоришта бијаху подигнута дуж ближе обале "
 "Велдина, јужно од Сорадока, да би се спријечили упади разбојника и орковских "
 "пљачкаша из Естмарка на територију Веснота. Али у каснијим годинама постаје "
-"Рјечне гарде бијеху напуштене, како се насељеници раширише кроз Естмарк, а "
+"Рјечне гарде бјеху напуштене, како се насељеници раширише кроз Естмарк, а "
 "оркови присилно повукоше сјеверно од Велике ријеке."
 
 #. [part]
@@ -202,7 +202,7 @@ msgid ""
 "watchmen..."
 msgstr ""
 "Све пође како ваља пошто су краљеве снаге пристигле. Неколико седмица не "
-"бијеше ниједног напада, те Гведријеви војници почеше да се опуштају. И онда, "
+"бјеше ниједног напада, те Гведријеви војници почеше да се опуштају. И онда, "
 "једног дана у зору, Гведрија и његове људе тргоше запањени крици ноћне "
 "страже..."
 
@@ -671,15 +671,15 @@ msgstr ""
 "Хвала вам. Позивам вас да нам се придружите. Немртви су овим земљама, "
 "пронаћи ће ове пећине прије или касније."
 
-# well-spelled: Нећ
+# |, no-check-spell, no-hybdl
 #. [message]: speaker=unit
 #: data/campaigns/Eastern_Invasion/scenarios/02.The_Escape_Tunnel.cfg:194
 msgid ""
 "My clan ha' lived in these caves for centuries. We'll no' be scattered now "
 "by a few undead."
 msgstr ""
-"Мој клан жив' у овим пећинама већ вијековима. Нећ' нас сад разбацати шачица "
-"немртваца."
+"Мој клан жив' у овим пећинама већ в’јековима. Неће нас сад разбацат шач’ца "
+"немртви’."
 
 #. [message]: speaker=Dacyn
 #: data/campaigns/Eastern_Invasion/scenarios/02.The_Escape_Tunnel.cfg:198
@@ -1673,7 +1673,7 @@ msgstr ""
 #. [message]: speaker=Wak-Rano
 #: data/campaigns/Eastern_Invasion/scenarios/06.Two_Paths.cfg:134
 msgid "Perhaps he will die, and I will win our battle without fighting."
-msgstr ""
+msgstr "Можда ће погинути, а ја ћу добити и нашу битку без борбе."
 
 #. [message]: speaker=Mal-Arnai
 #: data/campaigns/Eastern_Invasion/scenarios/06.Two_Paths.cfg:138
@@ -2856,10 +2856,9 @@ msgid ""
 "advisor."
 msgstr ""
 "Највећи видовњак у краљевству, Галдрен, предвидје да ће се једног дана, "
-"ускоро, велико зло раширити земљом. Краљ, природно, бијеше забринут. "
-"Видовњак му каза да је једини начин да се зло заустави, тај да се именује "
-"један маг, добро упућен у вјештине борбе против духова таме, за краљевог "
-"савјетника."
+"ускоро, велико зло раширити земљом. Краљ, природно, бјеше забринут. Видовњак "
+"му каза да је једини начин да се зло заустави, тај да се именује један маг, "
+"добро упућен у вјештине борбе против духова таме, за краљевог савјетника."
 
 #. [part]
 #: data/campaigns/Eastern_Invasion/scenarios/16.The_Council.cfg:29
