--- a/po/wesnoth-l/sr@ijekavian.po
+++ b/po/wesnoth-l/sr@ijekavian.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-l\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-10 12:33+0200\n"
-"PO-Revision-Date: 2010-04-05 17:37+0200\n"
-"Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
+"PO-Revision-Date: 2010-04-28 14:52+0200\n"
+"Last-Translator: Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -949,7 +949,7 @@ msgid ""
 msgstr ""
 "Па, не залазе унутар зидина мога града. Заправо су улогорени у близини, а "
 "главни гарнизон је подаље на југу, код Халстеда. Знам да ће ускоро и мени "
-"доћи време да се закунем на оданост, али ме не притискају. Плаше се да ћу "
+"доћи вријеме да се закунем на оданост, али ме не притискају. Плаше се да ћу "
 "одбити."
 
 #. [message]: speaker=Baldras
@@ -1162,8 +1162,8 @@ msgid ""
 "city of Carcyn."
 msgstr ""
 "Неуморно прогањани јахачима што извиђаше друм ка Еленсефару, Балдрас и "
-"његови људи провукоше се непримећени дуж мочварних обала Велике реке, све до "
-"града Карсина."
+"његови људи провукоше се непримећени дуж мочварних обала Велике ријеке, све "
+"до града Карсина."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Liberty/scenarios/05_Hide_and_Seek.cfg:447
@@ -1359,7 +1359,7 @@ msgid ""
 "attack a caravan head-on. It's not noble work, but our pursuits require "
 "plenty of gold."
 msgstr ""
-"Ја сам Хеликром, а теби је боље да не будеш тако слаткорјечив. Заповедам "
+"Ја сам Хеликром, а теби је боље да не будеш тако слаткорјечив. Заповиједам "
 "опасним људима. Моји најамници умију клизнути непримијећени кроз сваки град, "
 "опљачкати човјека на спавању, или напасти караван с чела. Дјела не баш "
 "племенита, али наша занимања захтијевају обиље злата."
@@ -1425,7 +1425,7 @@ msgid ""
 "home to a lich and two of its underling necromancers. Our experiments may "
 "have actually aroused it from sleep... we're not exactly sure."
 msgstr ""
-"У посљедње време Карсин је непрекидно магловит, јер ове шуме недавно "
+"У посљедње вријеме Карсин је непрекидно магловит, јер ове шуме недавно "
 "постадоше дом једном косцу и двојици његових поданичких некроманата. Можда "
 "су га баш наши експерименти разбудили... нисмо сасвим сигурни."
 
@@ -1604,9 +1604,9 @@ msgid ""
 "Wesnoth, and some of them were willing to resist it."
 msgstr ""
 "Док су напредовали, многи мушкарци и жене из сеоцади разбацаних око Карсина "
-"и Сједошумља приближише се дружини, с намером да се придруже. Успон краљичин "
-"баци мучан покров над становнике Веснота, неки од којих бијеху вољни да "
-"пруже отпор."
+"и Сједошумља приближише се дружини, с намјером да се придруже. Успон "
+"краљичин баци мучан покров над становнике Веснота, неки од којих бијеху "
+"вољни да пруже отпор."
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:30
@@ -1626,8 +1626,8 @@ msgid ""
 "of action..."
 msgstr ""
 "Улогорени на рубу шуме, тихо су посматрали замашне покрете снага из правца "
-"Алдрила, оближњег града, где полазе на сјеверозапад. Несигурни шта то значи, "
-"расправљаше о својим наредним корацима..."
+"Алдрила, оближњег града, гдје полазе на сјеверозапад. Несигурни шта то "
+"значи, расправљаше о својим наредним корацима..."
 
 # |, no-check-spell
 #. [side]: type=Royal Guard, id=Archarel
@@ -1839,7 +1839,7 @@ msgstr ""
 msgid ""
 "Send word to Helicrom that we are ready. It is time for him to repay his "
 "debt."
-msgstr "Обавијестите Хеликрома да смо спремни. Време му је да врати дуг."
+msgstr "Обавијестите Хеликрома да смо спремни. Вријеме му је да врати дуг."
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:372
@@ -1863,7 +1863,7 @@ msgid ""
 "separated the human cities surrounding Weldyn and the coastal regions of "
 "Elensefar."
 msgstr ""
-"Године Веснота 161., 338 година прије Ашевирине издаје, новокрунисани краљ "
+"Године Веснота 161, 338 година прије Ашевирине издаје, новокрунисани краљ "
 "пожеле да учини безбједном, једном и за свагда, дивљину која раздвајаше "
 "људске градове око Велдина и приобална подручја Еленсефара."
 
@@ -2141,7 +2141,7 @@ msgid ""
 "Baldras, Gwydion is Lord Maddock's son. This battle isn't just about Annuvin "
 "anymore."
 msgstr ""
-"Балдрасе, Гвидион је син господара Мадока. Овде се више не бије битка само "
+"Балдрасе, Гвидион је син господара Мадока. Овдје се више не бије битка само "
 "за Анувин."
 
 #. [message]: speaker=narrator
@@ -2200,7 +2200,7 @@ msgid ""
 "sides, while the remainder came to rest several hundred feet below ground, "
 "in the bowels of the hollowed-out mountain."
 msgstr ""
-"Уз громогласне потресе и неизмерне клобуке прашине, хиљаде тона камена и "
+"Уз громогласне потресе и неизмијерне клобуке прашине, хиљаде тона камена и "
 "дрвета уруши се само у себе. Нешто се прели преко обронака, а остатак се "
 "сурва неколико стотина стопа под земљу, у гротло издубљене планине."
 
@@ -2223,7 +2223,7 @@ msgstr ""
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:882
 msgid "Men, help me out of here! I am trapped under this rubble."
-msgstr "Људи, вадите ме одавде! Заробљен сам под рушевином."
+msgstr "Људи, вадите ме одавдје! Заробљен сам под рушевином."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:886
@@ -2403,7 +2403,7 @@ msgid ""
 "Maddock's men were successfully using tactics Baldras had mastered and used "
 "during his resistance."
 msgstr ""
-"Балдрас тек што је прешао Велику реку када гласине о ноћовребачима прожеше "
+"Балдрас тек што је прешао Велику ријеку када гласине о ноћовребачима прожеше "
 "његове редове. Уз горак осмијех, увидје да су људи господара Мадока успјешно "
 "примјењивали тактике којима је он овладао и употријебио за сопствени отпор."
 
@@ -2488,7 +2488,7 @@ msgstr ""
 "Некада велики ратници и генерали, проклети мржњом и страхом, вратише се на "
 "овај свијет као мртви витезови. Мртве штитоноше служе им док не сакупе "
 "довољно несвете моћи да сами постану мртви витезови. У том процесу преузели "
-"су добар део витезове моћи, укључујући и способност заповиједања нижњима."
+"су добар дио витезове моћи, укључујући и способност заповиједања нижњима."
 
 #. [attack]: type=blade
 #: data/campaigns/Liberty/units/Death_Squire.cfg:31
@@ -2740,7 +2740,7 @@ msgid ""
 "and swamps."
 msgstr ""
 "Трапери су умјешни ловци који снабдијевају храном и крзном и по неколико "
-"села. Ловачко искуство чини их највреднијим ноћу и у шумама и мочварама."
+"села. Ловачко искуство чини их најврједнијим ноћу и у шумама и мочварама."
 
 #. [unit_type]: id=Huntsman_Peasant
 #: data/campaigns/Liberty/units/Villagers.cfg:176
@@ -2776,7 +2776,7 @@ msgstr ""
 #: data/campaigns/Liberty/utils/utils.cfg:66
 msgid ""
 "There is a strange altar here and a pendant on it. I don't want to touch it."
-msgstr "Овде некакав чудан олтар и висак о њему. Не бих да га дирам."
+msgstr "Овдје некакав чудан олтар и висак о њему. Не бих да га дирам."
 
 #. [effect]: type=arcane
 #: data/campaigns/Liberty/utils/utils.cfg:79
