--- a/po/wesnoth-lib/sr@ijekavianlatin.po
+++ b/po/wesnoth-lib/sr@ijekavianlatin.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-lib\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-24 10:49+0200\n"
-"PO-Revision-Date: 2010-03-28 22:56+0200\n"
-"Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
+"PO-Revision-Date: 2010-04-28 15:15+0200\n"
+"Last-Translator: Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -1643,11 +1643,11 @@ msgstr "Prikaži sve ulaske u hol"
 
 #: src/game_preferences_display.cpp:169
 msgid "Use new lobby interface"
-msgstr ""
+msgstr "Novo sučelje hola"
 
 #: src/game_preferences_display.cpp:170
 msgid "Sort Lobby List"
-msgstr "Prikaži spisak hola"
+msgstr "Poređaj spisak hola"
 
 #: src/game_preferences_display.cpp:171
 msgid "Iconize Lobby List"
@@ -1868,7 +1868,7 @@ msgstr "Ne animiraj VI jedinice prilikom kretanja"
 
 #: src/game_preferences_display.cpp:343
 msgid "Sighting an allied unit interrupts your unit's movement"
-msgstr ""
+msgstr "Opažanje savezničke jedinice prekida kretanje vaše"
 
 #: src/game_preferences_display.cpp:351
 msgid "Overlay a grid onto the map"
@@ -1903,6 +1903,7 @@ msgid ""
 "mouseover^Use new lobby interface (only works after a manual reconnect to "
 "the server)"
 msgstr ""
+"Koristi novo sučelje hola (zahteva ručno ponovno povezivanje na server)."
 
 #: src/game_preferences_display.cpp:373
 msgid "Find and set path to MP server to host LAN games."
@@ -2573,7 +2574,7 @@ msgstr "Stvori mapu"
 
 #: src/hotkeys.cpp:161
 msgid "Apply a Mask"
-msgstr "Primeni masku"
+msgstr "Primijeni masku"
 
 #: src/hotkeys.cpp:163
 msgid "Create Mask"
@@ -2782,7 +2783,7 @@ msgstr "sveza"
 
 #: src/preferences_display.cpp:330
 msgid "Change Hotkey"
-msgstr "Promeni prečicu"
+msgstr "Promijeni prečicu"
 
 #: src/preferences_display.cpp:333
 msgid "Clear Hotkey"
@@ -2830,7 +2831,7 @@ msgid ""
 "In section '[$section|]' where '$primary_key| = $primary_value' the "
 "mandatory key '$key|' isn't set."
 msgstr ""
-"U odijeljku ‘[$section|]’ gde ‘$primary_key| = $primary_value’ nije "
+"U odijeljku ‘[$section|]’ gdje ‘$primary_key| = $primary_value’ nije "
 "postavljen obavezni ključ ‘$key|’."
 
 #: src/wml_exception.cpp:76
