--- a/po/wesnoth-low/sr@latin.po
+++ b/po/wesnoth-low/sr@latin.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-low\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-10 12:33+0200\n"
-"PO-Revision-Date: 2010-04-05 17:37+0200\n"
-"Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
+"PO-Revision-Date: 2010-04-28 15:15+0200\n"
+"Last-Translator: Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -1100,13 +1100,12 @@ msgstr ""
 
 #. [message]: id=Galtrid
 #: data/campaigns/Legend_of_Wesmere/scenarios/03_Kalian.cfg:877
-#, fuzzy
 msgid ""
 "What 'stone', foul and clumsy orc? Your lips are not fit even to name the "
 "citadel of the Ka'lian, for it has stood since before your kind crawled into "
 "sunlight and will endure long after you are forgotten!"
 msgstr ""
-" Kakav to „kamen“, pogani i nespretni orče? Sram da te je da uzimaš u usta "
+"Kakav to „kamen“, pogani i nespretni orče? Sram da te je da uzimaš u usta "
 "utvrdu kalijansku, koja je stajala još pre nego što je tvoja sorta izgmizala "
 "pod sunce i stajaće pošto budete davno zaboravljeni!"
 
@@ -1512,7 +1511,7 @@ msgid ""
 "his war-band moved to enter Wesmere Forest from a different direction ..."
 msgstr ""
 "Kako bi izbegli saurijanske zapreke na istočnim prilazima Vesmeru, Kalenz i "
-"njegova vojna pođoše u Vesmersku šumu iz drugog pravca..."
+"njegova ratna družina pođoše u Vesmersku šumu iz drugog pravca..."
 
 # |, no-check-spell
 #. [side]: type=Orcish Warlord, id=Urug-Tar
