--- a/po/wesnoth-manpages/sr@ijekavian.po
+++ b/po/wesnoth-manpages/sr@ijekavian.po
@@ -8,15 +8,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wesnoth-manpages\n"
 "POT-Creation-Date: 2010-03-26 15:41+0100\n"
-"PO-Revision-Date: 2010-03-28 22:56+0200\n"
-"Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
+"PO-Revision-Date: 2010-04-28 16:24+0200\n"
+"Last-Translator: Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -114,7 +114,7 @@ msgstr "B<--bpp>I<\\ број>"
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:49
 msgid "sets BitsPerPixel value. Example: B<--bpp 32>"
-msgstr "поставља вриједност BitsPerPixel. Пример: B<--bpp 32>"
+msgstr "поставља вриједност BitsPerPixel. Примјер: B<--bpp 32>"
 
 #. type: TP
 #: ../../doc/man/wesnoth.6:49
@@ -425,7 +425,7 @@ msgid ""
 "in preferences. Example: B<--server server.wesnoth.org>"
 msgstr ""
 "повезује се са домаћином ако је задат, или са првим сервером у поставкама. "
-"На пример: B<--server server.wesnoth.org>"
+"На примјер: B<--server server.wesnoth.org>"
 
 #. type: TP
 #: ../../doc/man/wesnoth.6:155
@@ -503,7 +503,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:180
 #, no-wrap
 msgid "B<--ai_config>I<number>B<=>I<value>"
-msgstr "B<--ai_config>I<број>B<=>I<вредност>"
+msgstr "B<--ai_config>I<број>B<=>I<вриједност>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:183
@@ -515,7 +515,7 @@ msgstr "бира поставну датотеку која се учитава 
 #: ../../doc/man/wesnoth.6:183
 #, no-wrap
 msgid "B<--algorithm>I<number>B<=>I<value>"
-msgstr "B<--algorithm>I<број>B<=>I<вредност>"
+msgstr "B<--algorithm>I<број>B<=>I<вриједност>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:190
@@ -530,14 +530,14 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:190
 #, no-wrap
 msgid "B<--controller>I<number>B<=>I<value>"
-msgstr "B<--controller>I<број>B<=>I<вредност>"
+msgstr "B<--controller>I<број>B<=>I<вриједност>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:196
 msgid ""
 "selects the controller for this side. Available values: B<human> and B<ai>."
 msgstr ""
-"бира управљача за задату страну. Могуће вриједности су: B<human> (човек) и "
+"бира управљача за задату страну. Могуће вриједности су: B<human> (човјек) и "
 "B<ai> (ВИ)."
 
 #. type: TP
@@ -610,7 +610,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:221
 #, no-wrap
 msgid "B<--scenario=>I<value>"
-msgstr "B<--scenario=>I<вредност>"
+msgstr "B<--scenario=>I<вриједност>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:225
@@ -625,7 +625,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:225
 #, no-wrap
 msgid "B<--side>I<number>B<=>I<value>"
-msgstr "B<--side>I<број>B<=>I<вредност>"
+msgstr "B<--side>I<број>B<=>I<вриједност>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:230
@@ -634,7 +634,7 @@ msgid ""
 "an id. Factions are described in the data/multiplayer.cfg file."
 msgstr ""
 "бира фракцију из текуће епохе за задату страну. Фракција се бира кључем; "
-"могуће вредности описане су у датотеци data/multiplayer.cfg"
+"могуће вриједности описане су у датотеци data/multiplayer.cfg"
 
 #. type: TP
 #: ../../doc/man/wesnoth.6:230
@@ -853,7 +853,7 @@ msgid ""
 "sets the maximum number of waiting worker threads for network I/O to n "
 "(default: B<5>,\\ max:\\ B<30>)."
 msgstr ""
-"поставља највећи број радних нити на чекању за мрежни У/И (подразумевано: "
+"поставља највећи број радних нити на чекању за мрежни У/И (подразумијевано: "
 "B<5>,\\ највише:\\ B<30>)."
 
 #. type: TP
@@ -1188,7 +1188,7 @@ msgstr ""
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:168
 msgid "Example: B<versions_accepted=\"*\"> accepts any version string."
-msgstr "Пример: B<versions_accepted=\"*\"> прихвата било коју ниску верзије."
+msgstr "Примјер: B<versions_accepted=\"*\"> прихвата било коју ниску верзије."
 
 #. type: TP
 #: ../../doc/man/wesnothd.6:168
@@ -1207,7 +1207,7 @@ msgid ""
 msgstr ""
 "Име руковаоца корисницима. Тренутно доступни су B<forum> (сервер се повезује "
 "са пхпББ базом података форума) и B<sample> (примјерна изведба сучеља "
-"руковаоца корисницима, луди сте ако ово употребите негде заозбиљно). "
+"руковаоца корисницима, луди сте ако ово употријебите негдје заозбиљно). "
 "Подразумијевана вриједност је B<forum>. Такође морате додати одјељак B<"
 "[user_handler]>, в. испод."
 
@@ -1299,8 +1299,8 @@ msgid ""
 "30 minutes."
 msgstr ""
 "Трајање. Формат је %d[%s[%d%s[...]]] гдје s из %s означава секунде, m "
-"минуте, h сате, D дане, M месеце, Y године, а d је број. Ако није дат "
-"модификатор, претпостављају се минути (m). Пример: B<time=\"1D12h30m\"> "
+"минуте, h сате, D дане, M мјесеце, Y године, а d је број. Ако није дат "
+"модификатор, претпостављају се минути (m). Примјер: B<time=\"1D12h30m\"> "
 "значи забрану у трајању од једног дана, 12 сати и 30 минута."
 
 #. type: Plain text
@@ -1434,7 +1434,7 @@ msgid ""
 "mail. Currently only used by the sample user handler."
 msgstr ""
 "B<[mail]> подешава СМТП сервер кроз који руковалац корисницима шаље пошту. "
-"Тренутно само за примерни руковалац."
+"Тренутно само за примјерни руковалац."
 
 #. type: TP
 #: ../../doc/man/wesnothd.6:249
