--- a/po/wesnoth-multiplayer/sr@ijekavian.po
+++ b/po/wesnoth-multiplayer/sr@ijekavian.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-multiplayer\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-23 23:46+0200\n"
-"PO-Revision-Date: 2010-03-14 18:26+0100\n"
-"Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
+"PO-Revision-Date: 2010-04-28 16:24+0200\n"
+"Last-Translator: Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -775,8 +775,8 @@ msgid ""
 "Cheers of your enemy are the last thing you hear as you slip into death..."
 "their joy fills your last moments with pure hate."
 msgstr ""
-"Покличи непријатељски последње су што чујеш док клизиш у смрт... Радост "
-"њихова испуњава ти последње тренутке чистом мржњом."
+"Покличи непријатељски посљедње су што чујеш док клизиш у смрт... Радост "
+"њихова испуњава ти посљедње тренутке чистом мржњом."
 
 #. [message]
 #: data/multiplayer/scenarios/2p_Dark_Forecast.cfg:1535
@@ -815,7 +815,7 @@ msgstr ""
 #. [multiplayer]: id=multiplayer_elensefar_courtyard
 #: data/multiplayer/scenarios/2p_Elensefar_Courtyard.cfg:5
 msgid "2p - Elensefar Courtyard"
-msgstr ""
+msgstr "2и: Еленсефарски врт"
 
 #. [multiplayer]: id=multiplayer_elensefar_courtyard
 #: data/multiplayer/scenarios/2p_Elensefar_Courtyard.cfg:7
@@ -823,11 +823,13 @@ msgid ""
 "Fight through corridors and gardens, and dominate the eastern courtyard of "
 "what used to be the glorious city of Elensefar."
 msgstr ""
+"Пробиј се кроз пролазе и баште, и превладај над источним вртом онога што је "
+"некад било славни град Еленсефар."
 
 #. [time]: id=underground_illum
 #: data/multiplayer/scenarios/2p_Elensefar_Courtyard.cfg:111
 msgid "Underground"
-msgstr ""
+msgstr "Подземље"
 
 #. [multiplayer]: id=multiplayer_Fallenstar_Lake
 #: data/multiplayer/scenarios/2p_Fallenstar_Lake.cfg:5
@@ -1433,7 +1435,7 @@ msgid ""
 msgstr ""
 "4 играча окружују средишњу кулу, игра опстанка против ВИ, као сви против "
 "свих, или 4 на 1. Средишњем играчу ће требати више злата у 4 на 1 или сви-"
-"против-свих, а најбољи начин за утврђивање количине је путем аукције, где "
+"против-свих, а најбољи начин за утврђивање количине је путем аукције, гдје "
 "НАЈНИЖА понуда добија. Мапа је врло мала, тако да се за остале играче "
 "препоручује 75 златника."
 
@@ -1695,7 +1697,7 @@ msgid ""
 "gold per villages is recommended."
 msgstr ""
 "Врло мала 3 на 3 на 3 мапа. Препоручује се тајмер на 60 секунди, због "
-"великог броја играча. Тимови су 159 пр. 267 пр. 348 (север пр. југоистока "
+"великог броја играча. Тимови су 159 пр. 267 пр. 348 (сјевер пр. југоистока "
 "пр. југозапада). Врло мало села по играчу, тако да се препоручује 3 златника "
 "по селу."
 
