--- a/po/wesnoth-multiplayer/sr@ijekavianlatin.po
+++ b/po/wesnoth-multiplayer/sr@ijekavianlatin.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-multiplayer\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-23 23:46+0200\n"
-"PO-Revision-Date: 2010-03-14 18:26+0100\n"
-"Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
+"PO-Revision-Date: 2010-04-28 16:24+0200\n"
+"Last-Translator: Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -776,8 +776,8 @@ msgid ""
 "Cheers of your enemy are the last thing you hear as you slip into death..."
 "their joy fills your last moments with pure hate."
 msgstr ""
-"Pokliči neprijateljski poslednje su što čuješ dok kliziš u smrt... Radost "
-"njihova ispunjava ti poslednje trenutke čistom mržnjom."
+"Pokliči neprijateljski posljednje su što čuješ dok kliziš u smrt... Radost "
+"njihova ispunjava ti posljednje trenutke čistom mržnjom."
 
 #. [message]
 #: data/multiplayer/scenarios/2p_Dark_Forecast.cfg:1535
@@ -816,7 +816,7 @@ msgstr ""
 #. [multiplayer]: id=multiplayer_elensefar_courtyard
 #: data/multiplayer/scenarios/2p_Elensefar_Courtyard.cfg:5
 msgid "2p - Elensefar Courtyard"
-msgstr ""
+msgstr "2i: Elensefarski vrt"
 
 #. [multiplayer]: id=multiplayer_elensefar_courtyard
 #: data/multiplayer/scenarios/2p_Elensefar_Courtyard.cfg:7
@@ -824,11 +824,13 @@ msgid ""
 "Fight through corridors and gardens, and dominate the eastern courtyard of "
 "what used to be the glorious city of Elensefar."
 msgstr ""
+"Probij se kroz prolaze i bašte, i prevladaj nad istočnim vrtom onoga što je "
+"nekad bilo slavni grad Elensefar."
 
 #. [time]: id=underground_illum
 #: data/multiplayer/scenarios/2p_Elensefar_Courtyard.cfg:111
 msgid "Underground"
-msgstr ""
+msgstr "Podzemlje"
 
 #. [multiplayer]: id=multiplayer_Fallenstar_Lake
 #: data/multiplayer/scenarios/2p_Fallenstar_Lake.cfg:5
@@ -1435,7 +1437,7 @@ msgid ""
 msgstr ""
 "4 igrača okružuju središnju kulu, igra opstanka protiv VI, kao svi protiv "
 "svih, ili 4 na 1. Središnjem igraču će trebati više zlata u 4 na 1 ili svi-"
-"protiv-svih, a najbolji način za utvrđivanje količine je putem aukcije, gde "
+"protiv-svih, a najbolji način za utvrđivanje količine je putem aukcije, gdje "
 "NAJNIŽA ponuda dobija. Mapa je vrlo mala, tako da se za ostale igrače "
 "preporučuje 75 zlatnika."
 
@@ -1697,7 +1699,7 @@ msgid ""
 "gold per villages is recommended."
 msgstr ""
 "Vrlo mala 3 na 3 na 3 mapa. Preporučuje se tajmer na 60 sekundi, zbog "
-"velikog broja igrača. Timovi su 159 pr. 267 pr. 348 (sever pr. jugoistoka "
+"velikog broja igrača. Timovi su 159 pr. 267 pr. 348 (sjever pr. jugoistoka "
 "pr. jugozapada). Vrlo malo sela po igraču, tako da se preporučuje 3 zlatnika "
 "po selu."
 
