--- a/po/wesnoth-tb/sr@ijekavian.po
+++ b/po/wesnoth-tb/sr@ijekavian.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-tb\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-10 12:33+0200\n"
-"PO-Revision-Date: 2010-04-05 17:47+0200\n"
-"Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
+"PO-Revision-Date: 2010-04-28 16:24+0200\n"
+"Last-Translator: Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -683,7 +683,7 @@ msgid ""
 "Aye. We think there's a nest of them north-east of here. They've captured my "
 "brother."
 msgstr ""
-"Уистину. Мислимо да им је гнијездо североисточно одавдје. Заробише мога "
+"Уистину. Мислимо да им је гнијездо сјевероисточно одавдје. Заробише мога "
 "брата."
 
 #. [message]: speaker=Brena
@@ -969,7 +969,7 @@ msgstr "Ето кључа у његовој одежди."
 msgid ""
 "That may well be the key to the cell they're holding Bjarn in! I will take "
 "it."
-msgstr "То лако може бити кључ ћелије где држе Бјарна! Дајте га мени."
+msgstr "То лако може бити кључ ћелије гдје држе Бјарна! Дајте га мени."
 
 #. [objective]: condition=win
 #: data/campaigns/Two_Brothers/scenarios/3_Guarded_Castle.cfg:631
@@ -1203,7 +1203,7 @@ msgid ""
 "would be their firm allies in troubled times."
 msgstr ""
 "Требаше године да се обнови село и уреде околна имања. Људи Магреа радише "
-"напорно, али уз пријатан осећај да ће им Арне и његови људи бити чврсти "
+"напорно, али уз пријатан осјећај да ће им Арне и његови људи бити чврсти "
 "савезници у часовима невоља."
 
 #. [part]
