--- a/po/wesnoth-tb/sr@ijekavianlatin.po
+++ b/po/wesnoth-tb/sr@ijekavianlatin.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-tb\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-10 12:33+0200\n"
-"PO-Revision-Date: 2010-04-05 17:47+0200\n"
-"Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
+"PO-Revision-Date: 2010-04-28 16:24+0200\n"
+"Last-Translator: Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -683,7 +683,7 @@ msgid ""
 "Aye. We think there's a nest of them north-east of here. They've captured my "
 "brother."
 msgstr ""
-"Uistinu. Mislimo da im je gnijezdo severoistočno odavdje. Zarobiše moga "
+"Uistinu. Mislimo da im je gnijezdo sjeveroistočno odavdje. Zarobiše moga "
 "brata."
 
 #. [message]: speaker=Brena
@@ -970,7 +970,7 @@ msgstr "Eto ključa u njegovoj odeždi."
 msgid ""
 "That may well be the key to the cell they're holding Bjarn in! I will take "
 "it."
-msgstr "To lako može biti ključ ćelije gde drže Bjarna! Dajte ga meni."
+msgstr "To lako može biti ključ ćelije gdje drže Bjarna! Dajte ga meni."
 
 #. [objective]: condition=win
 #: data/campaigns/Two_Brothers/scenarios/3_Guarded_Castle.cfg:631
@@ -1204,7 +1204,7 @@ msgid ""
 "would be their firm allies in troubled times."
 msgstr ""
 "Trebaše godine da se obnovi selo i urede okolna imanja. Ljudi Magrea radiše "
-"naporno, ali uz prijatan osećaj da će im Arne i njegovi ljudi biti čvrsti "
+"naporno, ali uz prijatan osjećaj da će im Arne i njegovi ljudi biti čvrsti "
 "saveznici u časovima nevolja."
 
 #. [part]
