--- a/po/wesnoth-thot/sr@ijekavian.po
+++ b/po/wesnoth-thot/sr@ijekavian.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-thot\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-10 12:33+0200\n"
-"PO-Revision-Date: 2010-04-05 17:47+0200\n"
-"Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
+"PO-Revision-Date: 2010-04-28 16:24+0200\n"
+"Last-Translator: Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -605,7 +605,7 @@ msgid ""
 "Gods with you and your precious 'Alliance'."
 msgstr ""
 "Ићи ћемо куда желимо и узети што нам се хоће, псето орковско. К мрачним "
-"боговима с тобом и твојим драгоценим „Савезом“."
+"боговима с тобом и твојим драгоцјеним „Савезом“."
 
 #. [message]: speaker=Angarthing
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/03_Strange_Allies.cfg:196
@@ -661,8 +661,8 @@ msgid ""
 "My thanks, dwarves. These bandits might have hacked a bloody swathe through "
 "the Alliance's tribes if we had not killed them here."
 msgstr ""
-"Хвала вама, патуљци. Ови су разбојници могли засећи крвави траг кроз племена "
-"Савеза, да их не заустависмо овдје."
+"Хвала вама, патуљци. Ови су разбојници могли засјећи крвави траг кроз "
+"племена Савеза, да их не заустависмо овдје."
 
 #. [message]: speaker=Aiglondur
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/03_Strange_Allies.cfg:258
@@ -1087,7 +1087,7 @@ msgid ""
 "A delegation of the Northern Alliance, traveling east. I believe we've found "
 "a friend of yours in the High Pass."
 msgstr ""
-"Посланство Северњачког савеза, путујемо на исток. Чини ми се да нађосмо "
+"Посланство Сјеверњачког савеза, путујемо на исток. Чини ми се да нађосмо "
 "једног вашег пријатеља у Пролазу."
 
 #. [message]: speaker=Master Perrin
@@ -1980,7 +1980,7 @@ msgstr ""
 #. [message]: speaker=Angarthing
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg:261
 msgid "I sense wrongness. Some greater evil awakens before us."
-msgstr "Осећам исквареност. Неко веће зло буди се пред нама."
+msgstr "Осјећам исквареност. Неко веће зло буди се пред нама."
 
 #. [objective]: condition=lose
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg:421
