--- a/po/wesnoth-thot/sr@ijekavianlatin.po
+++ b/po/wesnoth-thot/sr@ijekavianlatin.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-thot\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-10 12:33+0200\n"
-"PO-Revision-Date: 2010-04-05 17:47+0200\n"
-"Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
+"PO-Revision-Date: 2010-04-28 16:24+0200\n"
+"Last-Translator: Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -606,7 +606,7 @@ msgid ""
 "Gods with you and your precious 'Alliance'."
 msgstr ""
 "Ići ćemo kuda želimo i uzeti što nam se hoće, pseto orkovsko. K mračnim "
-"bogovima s tobom i tvojim dragocenim „Savezom“."
+"bogovima s tobom i tvojim dragocjenim „Savezom“."
 
 #. [message]: speaker=Angarthing
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/03_Strange_Allies.cfg:196
@@ -662,7 +662,7 @@ msgid ""
 "My thanks, dwarves. These bandits might have hacked a bloody swathe through "
 "the Alliance's tribes if we had not killed them here."
 msgstr ""
-"Hvala vama, patuljci. Ovi su razbojnici mogli zaseći krvavi trag kroz "
+"Hvala vama, patuljci. Ovi su razbojnici mogli zasjeći krvavi trag kroz "
 "plemena Saveza, da ih ne zaustavismo ovdje."
 
 #. [message]: speaker=Aiglondur
@@ -1092,7 +1092,7 @@ msgid ""
 "A delegation of the Northern Alliance, traveling east. I believe we've found "
 "a friend of yours in the High Pass."
 msgstr ""
-"Poslanstvo Severnjačkog saveza, putujemo na istok. Čini mi se da nađosmo "
+"Poslanstvo Sjevernjačkog saveza, putujemo na istok. Čini mi se da nađosmo "
 "jednog vašeg prijatelja u Prolazu."
 
 #. [message]: speaker=Master Perrin
@@ -1987,7 +1987,7 @@ msgstr ""
 #. [message]: speaker=Angarthing
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg:261
 msgid "I sense wrongness. Some greater evil awakens before us."
-msgstr "Osećam iskvarenost. Neko veće zlo budi se pred nama."
+msgstr "Osjećam iskvarenost. Neko veće zlo budi se pred nama."
 
 #. [objective]: condition=lose
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg:421
