--- a/po/wesnoth-tsg/sr@ijekavian.po
+++ b/po/wesnoth-tsg/sr@ijekavian.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-tsg\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-10 12:33+0200\n"
-"PO-Revision-Date: 2010-04-05 17:37+0200\n"
-"Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
+"PO-Revision-Date: 2010-04-28 16:24+0200\n"
+"Last-Translator: Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -280,7 +280,7 @@ msgid ""
 "harm!"
 msgstr ""
 "Послат сам да преузмем заповједништво над Јужњачком гардом, и поставим "
-"ствари на њихово место. Морамо подићи сељане на оружје и протјерати "
+"ствари на њихово мјесто. Морамо подићи сељане на оружје и протјерати "
 "разбојнике, прије него ли начине још зла!"
 
 #. [message]: speaker=Moreth
@@ -3538,7 +3538,7 @@ msgstr ""
 #: data/campaigns/The_South_Guard/scenarios/09a_Vengeance.cfg:276
 #: data/campaigns/The_South_Guard/scenarios/09a_Vengeance.cfg:288
 msgid "Disciple of Mebrin"
-msgstr "следбеник Мебринов"
+msgstr "сљедбеник Мебринов"
 
 #. [objective]: condition=win
 #: data/campaigns/The_South_Guard/scenarios/09a_Vengeance.cfg:230
@@ -3554,7 +3554,7 @@ msgstr "За сваког од нас кога посијечете, још ће
 #: data/campaigns/The_South_Guard/scenarios/09a_Vengeance.cfg:315
 #: data/campaigns/The_South_Guard/utils/sg_deaths.cfg:52
 msgid "I have given my all for my kingdom! Avenge me, Deoran!"
-msgstr "Дадох све од себе за краљевство моје! Освети ме, Деоране!"
+msgstr "Дадох све од себе за своје краљевство! Освети ме, Деоране!"
 
 #. [message]: speaker=Minister Hylas
 #: data/campaigns/The_South_Guard/scenarios/09a_Vengeance.cfg:328
@@ -3609,7 +3609,7 @@ msgstr "Отправиш ли Етилијел до Великог дрвета 
 #. [message]: speaker=Ethiliel
 #: data/campaigns/The_South_Guard/scenarios/09a_Vengeance.cfg:414
 msgid "I feel like I belong on this spot."
-msgstr "Осјећам као да ми је овдје место."
+msgstr "Осјећам као да ми је овдје мјесто."
 
 #. [scenario]: id=10a_Elf_Epilogue
 #. [scenario]: id=9b_Bandit_Epilogue
@@ -3925,7 +3925,7 @@ msgid ""
 msgstr ""
 "Пошто порази Урзу Матина, Деоран смјеста одасла извиднице преко цијеле "
 "покрајине. Оне му пријавише како разбојници несметано лутају границом, "
-"злостављајући сељаке и житеље. А и то да нигде не нађоше војнике Јужњачке "
+"злостављајући сељаке и житеље. А и то да нигдје не нађоше војнике Јужњачке "
 "гарде."
 
 #. [part]
