--- a/po/wesnoth-tsg/sr@ijekavianlatin.po
+++ b/po/wesnoth-tsg/sr@ijekavianlatin.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-tsg\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-10 12:33+0200\n"
-"PO-Revision-Date: 2010-04-05 17:37+0200\n"
-"Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
+"PO-Revision-Date: 2010-04-28 16:24+0200\n"
+"Last-Translator: Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -280,7 +280,7 @@ msgid ""
 "harm!"
 msgstr ""
 "Poslat sam da preuzmem zapovjedništvo nad Južnjačkom gardom, i postavim "
-"stvari na njihovo mesto. Moramo podići seljane na oružje i protjerati "
+"stvari na njihovo mjesto. Moramo podići seljane na oružje i protjerati "
 "razbojnike, prije nego li načine još zla!"
 
 #. [message]: speaker=Moreth
@@ -3547,7 +3547,7 @@ msgstr ""
 #: data/campaigns/The_South_Guard/scenarios/09a_Vengeance.cfg:276
 #: data/campaigns/The_South_Guard/scenarios/09a_Vengeance.cfg:288
 msgid "Disciple of Mebrin"
-msgstr "sledbenik Mebrinov"
+msgstr "sljedbenik Mebrinov"
 
 #. [objective]: condition=win
 #: data/campaigns/The_South_Guard/scenarios/09a_Vengeance.cfg:230
@@ -3563,7 +3563,7 @@ msgstr "Za svakog od nas koga posiječete, još će ih se uzdići!"
 #: data/campaigns/The_South_Guard/scenarios/09a_Vengeance.cfg:315
 #: data/campaigns/The_South_Guard/utils/sg_deaths.cfg:52
 msgid "I have given my all for my kingdom! Avenge me, Deoran!"
-msgstr "Dadoh sve od sebe za kraljevstvo moje! Osveti me, Deorane!"
+msgstr "Dadoh sve od sebe za svoje kraljevstvo! Osveti me, Deorane!"
 
 #. [message]: speaker=Minister Hylas
 #: data/campaigns/The_South_Guard/scenarios/09a_Vengeance.cfg:328
@@ -3618,7 +3618,7 @@ msgstr "Otpraviš li Etilijel do Velikog drveta na nadmudrivanje sa Iteldenom"
 #. [message]: speaker=Ethiliel
 #: data/campaigns/The_South_Guard/scenarios/09a_Vengeance.cfg:414
 msgid "I feel like I belong on this spot."
-msgstr "Osjećam kao da mi je ovdje mesto."
+msgstr "Osjećam kao da mi je ovdje mjesto."
 
 #. [scenario]: id=10a_Elf_Epilogue
 #. [scenario]: id=9b_Bandit_Epilogue
@@ -3935,7 +3935,7 @@ msgid ""
 msgstr ""
 "Pošto porazi Urzu Matina, Deoran smjesta odasla izvidnice preko cijele "
 "pokrajine. One mu prijaviše kako razbojnici nesmetano lutaju granicom, "
-"zlostavljajući seljake i žitelje. A i to da nigde ne nađoše vojnike "
+"zlostavljajući seljake i žitelje. A i to da nigdje ne nađoše vojnike "
 "Južnjačke garde."
 
 #. [part]
