--- a/po/wesnoth/sr@ijekavian.po
+++ b/po/wesnoth/sr@ijekavian.po
@@ -10,15 +10,15 @@ msgstr ""
 "Project-Id-Version: wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-23 23:46+0200\n"
-"PO-Revision-Date: 2010-04-08 21:45+0200\n"
-"Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
+"PO-Revision-Date: 2010-04-28 16:24+0200\n"
+"Last-Translator: Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>\n"
 "Language-Team: Serbian\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Associated-UI-Catalogs: wesnoth-lib wesnoth-httt\n"
 "X-Wrapping: fine\n"
@@ -104,15 +104,13 @@ msgstr "Звукови хола"
 
 #. [ai]: id=default # id is needed uniquely identify a MP AI, it is not needed in the scenario AI
 #: data/ai/ais/default_ai.cfg:4
-#, fuzzy
 msgid "Multiplayer_AI^Default AI"
-msgstr "Вишеиграње"
+msgstr "основна ВИ"
 
 #. [ai]: id=testing_ai_default
 #: data/ai/ais/testing_ai_default.cfg:5
-#, fuzzy
 msgid "Multiplayer_AI^RCA AI"
-msgstr "Вишеиграње"
+msgstr "РЦА ВИ"
 
 #. [time]: id=underground
 #. [illuminated_time]: id=underground_illum
@@ -8746,7 +8744,7 @@ msgstr "Ажурира детаље вашег надимка. За могуће
 
 #: src/menu_events.cpp:2282
 msgid "<detail> <value>"
-msgstr "<детаљ> <вредност>"
+msgstr "<детаљ> <вриједност>"
 
 #: src/menu_events.cpp:2284
 msgid "Request information about a nick."
@@ -9506,102 +9504,96 @@ msgstr "величина: "
 
 #: src/multiplayer_lobby.cpp:119
 msgid "--no games open--"
-msgstr ""
+msgstr "--нема започетих партија--"
 
 #: src/multiplayer_lobby.cpp:153
-#, fuzzy
 msgid " (Unknown Era)"
-msgstr "непозната епоха"
+msgstr " (непозната епоха)"
 
 #: src/multiplayer_lobby.cpp:536 src/multiplayer_lobby.cpp:899
-#, fuzzy
 msgid "Password Required"
-msgstr "Лозинка: "
+msgstr "Неопходна лозинка"
 
 #: src/multiplayer_lobby.cpp:720 src/multiplayer_wait.cpp:174
 msgid "Game Lobby"
 msgstr "Играчки хол"
 
 #: src/multiplayer_lobby.cpp:725
-#, fuzzy
 msgid "Observe Game"
-msgstr "посматрачи"
+msgstr "Посматрај партију"
 
 #: src/multiplayer_lobby.cpp:726
-#, fuzzy
 msgid "Join Game"
-msgstr "Учитавање позиције"
+msgstr "Придружи се партији"
 
 #: src/multiplayer_lobby.cpp:728
-#, fuzzy
 msgid "Quick Replays"
-msgstr "Снимак"
+msgstr "Брзи снимци"
 
 #: src/multiplayer_lobby.cpp:730
-#, fuzzy
 msgid "Preferences"
-msgstr "Зависности"
+msgstr "Поставке"
 
 #: src/multiplayer_lobby.cpp:732
-#, fuzzy
 msgid "Quit"
-msgstr "хитрост"
+msgstr "Напусти"
 
 #: src/multiplayer_lobby.cpp:734
-#, fuzzy
 msgid "Apply Filter"
-msgstr "Филтер: "
+msgstr "Примијени филтер"
 
 #: src/multiplayer_lobby.cpp:735
 msgid "Invert"
-msgstr ""
+msgstr "Изврни"
 
 #: src/multiplayer_lobby.cpp:736
-#, fuzzy
 msgid "Vacant Slots"
-msgstr "слободна мјеста:"
+msgstr "Слободна мјеста"
 
 #: src/multiplayer_lobby.cpp:737
 msgid "Friends in Game"
-msgstr ""
+msgstr "Пријатељи у игри"
 
 #: src/multiplayer_lobby.cpp:738
-#, fuzzy
 msgid "Filter:"
-msgstr "Филтер: "
+msgstr "Филтер:"
 
 #: src/multiplayer_lobby.cpp:747
 msgid "Skip quickly to the active turn when observing"
-msgstr ""
+msgstr "Брзо скочи на активни потез при посматрању."
 
 #: src/multiplayer_lobby.cpp:751
 msgid ""
 "Enable the games filter. If unchecked all games are shown, regardless of any "
 "filter."
 msgstr ""
+"Укључи филтер партија. Ако је празно, приказују се све партије без обзира на "
+"филтер."
 
 #: src/multiplayer_lobby.cpp:754
 msgid ""
 "Show all games that do *not* match your filter. Useful for hiding games you "
 "are not interested in."
 msgstr ""
+"Прикажи све партије које филтер не поклапа. Корисно за скривање партија које "
+"вас не занимају."
 
 #: src/multiplayer_lobby.cpp:758
 msgid "Only show games that have at least one vacant slot"
-msgstr ""
+msgstr "Прикажи само партије са бар једним слободним мјестом."
 
 #: src/multiplayer_lobby.cpp:762
 msgid ""
 "Only show games that are played or observed by at least one of your friends"
-msgstr ""
+msgstr "Прикажи само партије које игра или посматра бар један од пријатеља."
 
 #: src/multiplayer_lobby.cpp:766
 msgid "Only show games whose title or description contain the entered text"
-msgstr ""
+msgstr "Прикажи само партије чији наслов или опис садржи унијети текст."
 
 #: src/multiplayer_lobby.cpp:900
 msgid "Joining this game requires a password."
-msgstr ""
+msgstr "За прикључивање овој партији неопходна је лозинка."
 
 #: src/multiplayer_ui.cpp:195
 msgid "Invalid Color"
