--- a/po/wesnoth/sr@ijekavianlatin.po
+++ b/po/wesnoth/sr@ijekavianlatin.po
@@ -10,15 +10,15 @@ msgstr ""
 "Project-Id-Version: wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-23 23:46+0200\n"
-"PO-Revision-Date: 2010-04-08 21:45+0200\n"
-"Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
+"PO-Revision-Date: 2010-04-28 16:24+0200\n"
+"Last-Translator: Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>\n"
 "Language-Team: Serbian\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Associated-UI-Catalogs: wesnoth-lib wesnoth-httt\n"
 "X-Wrapping: fine\n"
@@ -104,15 +104,13 @@ msgstr "Zvukovi hola"
 
 #. [ai]: id=default # id is needed uniquely identify a MP AI, it is not needed in the scenario AI
 #: data/ai/ais/default_ai.cfg:4
-#, fuzzy
 msgid "Multiplayer_AI^Default AI"
-msgstr "Višeigranje"
+msgstr "osnovna VI"
 
 #. [ai]: id=testing_ai_default
 #: data/ai/ais/testing_ai_default.cfg:5
-#, fuzzy
 msgid "Multiplayer_AI^RCA AI"
-msgstr "Višeigranje"
+msgstr "RCA VI"
 
 #. [time]: id=underground
 #. [illuminated_time]: id=underground_illum
@@ -8762,7 +8760,7 @@ msgstr "Ažurira detalje vašeg nadimka. Za moguće detalje, izvršiti „/detai
 
 #: src/menu_events.cpp:2282
 msgid "<detail> <value>"
-msgstr "<detalj> <vrednost>"
+msgstr "<detalj> <vrijednost>"
 
 #: src/menu_events.cpp:2284
 msgid "Request information about a nick."
@@ -9522,102 +9520,96 @@ msgstr "veličina: "
 
 #: src/multiplayer_lobby.cpp:119
 msgid "--no games open--"
-msgstr ""
+msgstr "--nema započetih partija--"
 
 #: src/multiplayer_lobby.cpp:153
-#, fuzzy
 msgid " (Unknown Era)"
-msgstr "nepoznata epoha"
+msgstr " (nepoznata epoha)"
 
 #: src/multiplayer_lobby.cpp:536 src/multiplayer_lobby.cpp:899
-#, fuzzy
 msgid "Password Required"
-msgstr "Lozinka: "
+msgstr "Neophodna lozinka"
 
 #: src/multiplayer_lobby.cpp:720 src/multiplayer_wait.cpp:174
 msgid "Game Lobby"
 msgstr "Igrački hol"
 
 #: src/multiplayer_lobby.cpp:725
-#, fuzzy
 msgid "Observe Game"
-msgstr "posmatrači"
+msgstr "Posmatraj partiju"
 
 #: src/multiplayer_lobby.cpp:726
-#, fuzzy
 msgid "Join Game"
-msgstr "Učitavanje pozicije"
+msgstr "Pridruži se partiji"
 
 #: src/multiplayer_lobby.cpp:728
-#, fuzzy
 msgid "Quick Replays"
-msgstr "Snimak"
+msgstr "Brzi snimci"
 
 #: src/multiplayer_lobby.cpp:730
-#, fuzzy
 msgid "Preferences"
-msgstr "Zavisnosti"
+msgstr "Postavke"
 
 #: src/multiplayer_lobby.cpp:732
-#, fuzzy
 msgid "Quit"
-msgstr "hitrost"
+msgstr "Napusti"
 
 #: src/multiplayer_lobby.cpp:734
-#, fuzzy
 msgid "Apply Filter"
-msgstr "Filter: "
+msgstr "Primijeni filter"
 
 #: src/multiplayer_lobby.cpp:735
 msgid "Invert"
-msgstr ""
+msgstr "Izvrni"
 
 #: src/multiplayer_lobby.cpp:736
-#, fuzzy
 msgid "Vacant Slots"
-msgstr "slobodna mjesta:"
+msgstr "Slobodna mjesta"
 
 #: src/multiplayer_lobby.cpp:737
 msgid "Friends in Game"
-msgstr ""
+msgstr "Prijatelji u igri"
 
 #: src/multiplayer_lobby.cpp:738
-#, fuzzy
 msgid "Filter:"
-msgstr "Filter: "
+msgstr "Filter:"
 
 #: src/multiplayer_lobby.cpp:747
 msgid "Skip quickly to the active turn when observing"
-msgstr ""
+msgstr "Brzo skoči na aktivni potez pri posmatranju."
 
 #: src/multiplayer_lobby.cpp:751
 msgid ""
 "Enable the games filter. If unchecked all games are shown, regardless of any "
 "filter."
 msgstr ""
+"Uključi filter partija. Ako je prazno, prikazuju se sve partije bez obzira "
+"na filter."
 
 #: src/multiplayer_lobby.cpp:754
 msgid ""
 "Show all games that do *not* match your filter. Useful for hiding games you "
 "are not interested in."
 msgstr ""
+"Prikaži sve partije koje filter ne poklapa. Korisno za skrivanje partija "
+"koje vas ne zanimaju."
 
 #: src/multiplayer_lobby.cpp:758
 msgid "Only show games that have at least one vacant slot"
-msgstr ""
+msgstr "Prikaži samo partije sa bar jednim slobodnim mjestom."
 
 #: src/multiplayer_lobby.cpp:762
 msgid ""
 "Only show games that are played or observed by at least one of your friends"
-msgstr ""
+msgstr "Prikaži samo partije koje igra ili posmatra bar jedan od prijatelja."
 
 #: src/multiplayer_lobby.cpp:766
 msgid "Only show games whose title or description contain the entered text"
-msgstr ""
+msgstr "Prikaži samo partije čiji naslov ili opis sadrži unijeti tekst."
 
 #: src/multiplayer_lobby.cpp:900
 msgid "Joining this game requires a password."
-msgstr ""
+msgstr "Za priključivanje ovoj partiji neophodna je lozinka."
 
 #: src/multiplayer_ui.cpp:195
 msgid "Invalid Color"
